공부한거 추가

--- a/java/modern_java/모던자바인액션.md
+++ b/java/modern_java/모던자바인액션.md
@@ -57,9 +57,11 @@
         - 언제 사용하는것이 좋을까?
           - 전반적으로 비슷하나, 특정부분에서 차이가 있다면 해당부분에 파라미터와 리턴값을ㅇ 잘 맞추어서 이를 함수형 인터페이스로 만들고, 이에 대한 전략을 전달하도록!
     - 람다는 타입을 제공해주지않아도, 알아서 타입추론을 진행한다
-      1. 람다를 사용한 메서드의 선언을 확인
-      2. 선언된것을 기반으로 함수형 인터페이스에 타입을 추론하고 이를 기대함(여기서 함수형 인터페이스의 제네릭이라면 타입을 구체화함..)
+      1. 람다를 사용한 메서드의 선언을 확인 
+      2. 선언된것을 기반으로 함수형 인터페이스에 타입을 추론하고 이를 기대함(여기서 함수형 인터페이스의 제네릭이라면 타입을 구체화함..) 
+         - ex. Predicate 함수형 인터페이스이고, Apple을 제네릭으로 사용했다면, `Predicate<Apple>` 이렇게 적용
       3. 기대한 함수형 인터페이스의 메서드에 어떤 타입이 들어오고 리턴값은 무엇인지를 확인
+         - ex. Apple이 전달받을 인수이고, 리턴은 boolean 이구나!
       4. 메서드에 실제 전달된 값이 이와 같은지 확인하여 컴파일
     - 람다 표현식 앞에 "()" 캐스트 연산자를 넣을수있는데, 이는 어떤 메소드 시그니처가 사용되어야하는지를 명시적으로 구분해주는 역할을 한다
       - 예를들어, 인수없고 리턴값 void인 함수형인터페이스는 여러개가 될수있기때문에 어떤놈인지 알려주는것!
@@ -338,6 +340,16 @@
           - *collect vs reduce <span style="color:yellow">좀 더 찾아볼것 p206</span>
             - collect 메서드 : 도출하려는 결과를 누적하는 컨테이너를 가지고 reducing
             - reduce 메서드 : 두 값을 하나로 도출하는 불변형 연산 
+            - 참고사이트 : https://stackoverflow.com/questions/22577197/java-8-streams-collect-vs-reduce
+              - 첫번째 답변
+                - collect를 사용하여 StringBuilder 라는 컨테이너에 String 데이터를 축적하는 방식으로 만들수있음..
+                - reduce를 사용하면 String을 더하는 reduce쓰면 매우 성능안좋음.. 왜냐하면 더할때마다 String을 새로 만들어야하기때문
+                - 실제 코딩으로 구현해봤을때 아래와 같이 가능한데, 실제 내부 구현을 살펴보면 동일한 로직탐.. <span style="color:yellow">다른 답변을 참고하던 암튼 더 살펴볼필요있음..!</span>
+                  ```java
+                    Stream.of("ab","cd","ef").reduce(new StringBuilder(),(builder,s)->builder.append(s),StringBuilder::append);
+                    Stream.of("ab","cd","ef").collect(StringBuilder::new, (container, s) ->container.append(s) ,StringBuilder::append);
+                  ```
+
       - 요소 그룹화
         - 그룹화할 key를 넘겨주는함수를 분류함수 라고 함 (근데 여기서 함수는 정적메서드는 아님.. 클래스에 독립되어있지않음)
         - groupingBy에 두번째인수를 활용하여 그룹핑한 데이터에 추가적인 조작이 가능 
@@ -411,6 +423,7 @@
           - ArrayList를 LinkedList보다 효율적으로 분할 가능.. 
             - LinkedList는 모든 요소를 탐색해야하지만, ArrayList는 요소를 탐색하지않고도 리스트를 분할수있음
           - range 팩토리 메서드로 만든 기본형 스트림도 쉽게 분해가능
+          
           |소스|분해성|
           |--|--|
           |ArrayList|훌륭함|
@@ -537,7 +550,7 @@
       - 복잡한 람다를 테스트하기위해서는 메서드참조로 변경하여 테스트하는게 좋음(어차피 복잡한 람다는 메서드 참조로빼는게 가독성이 좋기떄문에.. 그리고 메서드참조를 사용하면 해당 람다로직을 검증하기도 수월)
       - 메서드가 람다를 인수로받는다면, 다른 람다로 메서드의 동작을 테스트
     - 디버깅
-      - 스트림 파이프라인의 연산들에는 peek 을 사용할수있다! 이는 데이터를 소비하지않기때문에, 연산중간중간에 넣어서 어떻게 데이터가 어떻게 처리되고있는지 디버깅할수있다!
+      - ***스트림 파이프라인의 연산들에는 peek 을 사용할수있다! 이는 데이터를 소비하지않기때문에, 연산중간중간에 넣어서 어떻게 데이터가 어떻게 처리되고있는지 디버깅할수있다!***
 - Part 4 매일 자바와 함께
   - 11장 - null 대신 Optional 클래스
     - null 때문에 발생하는 문제
@@ -595,6 +608,14 @@
             return person.flatMap(p -> car.map(c -> findCheapestInsurance(p,c))); //person이 empty이면 바로 empty리턴(flatmap), car가 empty이여도 바로 empty리턴(map)
           }
         
+          //만약 특정 동작 수행하고 Optional이 empty이면 다음 동작수행하도록 하는 로직(지연된 실행)
+          List<DistributionInfo> distributionInfos = Stream.of(getRatioFromRedis(redisRepository), getRatioFromDb(distributionDaoAdapter)) //getRatioFromXXX 는 모두 Supplier<Optional<List<DistributionInfo>>> 반환
+                .map(Supplier::get)
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .filter(list -> !list.isEmpty())
+                .findFirst()
+                .orElseGet(()->getDefaultDistributionRatio());
         ```
       - Optional 클래스와 메서드 정리 (p383)
         - 사진넣어놓자
@@ -648,7 +669,7 @@
         - 일회성의 값을 처리하는데 적합
         - java8에서 제공하는 CompletableFuture를 사용해서 좀더 풍부한 기능 사용가능 (이거 사용하면 일련의 값을 처리할수도있으므로 리액티브 형식 API의 장점을 활용할수있을듯..?)
           - CompletableFuture는 실행할 코드 없이 Future를 만들수있도록 허용하며(껍데기를 만드는느낌.. Callable과같이 call메서드에 필요한작업을 필수적으로 넣어줄 필요가 없다!) complete메서드를 이용해 다른 스레드가 작업을 완료하여 값을 넣어주면, get으로 값을 얻을수 있도록해준다.. 
-          - CompletableFuture와 콤비네이터를 이용해 각 연산의 결과를(Future로 되어있겠지) get으로 하나씩 가져오면서 계속적으로 block되거나, 콜백 지옥을 피할수있다!
+          - ***CompletableFuture와 콤비네이터를 이용***하기때문에, 각 연산의 결과를(Future로 되어있겠지) get으로 하나씩 가져오면서 계속적으로 block되거나, 콜백 지옥을 피할수있다!
       - => 계산이 오래걸리거나, 네트워크 또는 사람의 입력을 기다리는 메서드에 비동기 API를 사용하면 애플리케이션의 효율성이 크게 향상됨..
       - => block 시킴으로 스레드 자원을 점유하지마라!
         - 예를들어, A라는 메서드가 실행되고 B라는 메서드를 2초뒤에 실행되어야한다고하면, A와 B사이에 Sleep을 주어서 스레드 자원을 점유해버리지 말고, A라는 메서드를 실행한뒤에 2초뒤에 B메서드를 실행하라는 스케줄러를 사용하여 스레드를 block 시키지마라!(스레드 대신 그냥 메모리를 좀더 사용했을뿐..)
@@ -656,6 +677,7 @@
     - 리엑티브 프로그래밍(pub-sub 모델)
       - 발행-구독 모델의 리엑티브 프로그래밍은 구독자가 여러 발행자를 구독할수있기때문에, 실시간으로 여러 파이프라인의 결과를 합치는데 유리하다(반대로 발행자하나에 각자 구독스타일에맞추어 구독자가 여럿있을수있으니 분리하는데도 유용)
         - 스트림은 결과값을 input으로 만들어주어 선형적인 파이프라인처리에 좋지만, 두 파이프라인의 결과를 합치거나 분리하기가 어렵다(스트림 내부의 병렬처리 작업을 진행하는것과는 다른개념인듯함..)  
+          - Flux의 zip이나 mergewith와 같은 개념이 없어서그런듯..?
       - 또한 한번의 결과만 받고 끝내는 future와 달리 특정이벤트에 발생에 따라 결과를 지속적으로 받아야할때 좋다
       - 이런 모델을 java9부터 Flow API를 통해 구현하였다
     - 15장을 통한 기타 팁
