--- a/java/modern_java/모던자바인액션.md
+++ b/java/modern_java/모던자바인액션.md
@@ -927,3 +927,10 @@
 ---
 
 - stream 으로 sum하는 여러 방법 : https://www.baeldung.com/java-stream-sum
+- 리액티브 프로그래밍이란?
+  - 변화의 전파와 데이터 흐름과 관련된 선언적 프로그래밍 패러다임이다.
+    - 변화의 전파와 데이터 흐름 : 데이터가 변경 될 때 마다 이벤트를 발생시켜서 데이터를 계속적으로 전달한다.
+    - 선언적 프로그래밍 : 실행할 동작을 구체적으로 명시하는 명령형 프로그램이과 달리 선언형 프로그래밍은 단순히 목표를 선언한다.
+  - https://yunzai.dev/posts/RxJava_%EB%A6%AC%EC%97%91%ED%8B%B0%EB%B8%8C(Reative)_%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D%EC%9D%B4%EB%9E%80/#:~:text=%EB%A6%AC%EC%95%A1%ED%8B%B0%EB%B8%8C%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D(Reactive%20Programming,%EB%A5%BC%20%EA%B3%84%EC%86%8D%EC%A0%81%EC%9C%BC%EB%A1%9C%20%EC%A0%84%EB%8B%AC%ED%95%9C%EB%8B%A4.
+  - => 기본적으로 리엑티브 스트림은 이를 목적으로 만들어진 표준이기때문에, 리엑티브 스트림즈를 구현한 리엑터를 사용하여 프로그래밍을 하였다면 리엑티브 프로그래밍이라 할수있다!
+
