--- a/디자인패턴/디자인패턴_헤드퍼스트.md
+++ b/디자인패턴/디자인패턴_헤드퍼스트.md
@@ -72,6 +72,7 @@
     - 가장 큰 장점은 기존 소스 건드리지않고 원하는기능을 추가해줄수있음!(기존 자바IO에서 모든 문자열을 소문자로 바꾸게하는 Wrapper클래스를 만들수있다!)
     - 데코레이터 패턴을 사용하면 자잘한 객체들이 매우 많이 추가될수있고(특히 그러다보면 중간에 필수적으러 넣어야할 구상객체를 놓칠수도있음..), 데코레이터를 너무 많이 사용하면 코드가 필요이상으로 복잡해진다!
       - 이런 부분을 보완해주는것이 팩토리패턴과 빌드패턴
+        - client 요청에 직접 만들어서 전달해주니깐.. 중간에 놓치는 구상객체없음
 
 - 팩토리패턴(PIZZA)
   - 팩토리 메소드패턴
@@ -95,7 +96,7 @@
   - DCL 사용시 volatile 사용을 필수적으로 해야하는것에 관련한 설명
     - https://yeahhappyday.tistory.com/entry/singleton-%ED%8C%A8%ED%84%B4%EA%B3%BC-volatileDCLDouble-Checking-Locking
 
-- 커맨드 패턴 (netty에서 겁나 많이쓰이는것 같음..)
+- 커맨드 패턴 
   - 요구사항을 객체로 캡슐화 가능, 매개변수를 써서 여러 가지 다른 요구사항을 집어넣을수도있으며, 요청 내역을 큐에 저장하거나 로그로 기록할수도있으며, 작업 취소기능도 지원가능..
   - 간단한 정리
     - 인보커
@@ -113,6 +114,7 @@
 	- 요청을 하는 객체와 그 요청을 수행하는 객체를 분리시키고 싶을때 사용하면된다!
 	- 인보커를 사용해서 인보커에 구성되어있는 커맨더를실행.. 커맨더는 리시버의 특정 행동을 실행<br> 결국, 인보커는 리시버가 어떤 행동을 하는지 자세히는 알수없으나, 행동을 실행은 시켜주는놈..<br> 하나의 리시버에 여러개의 커맨더를 가질수있으며, 이러한 여러 커맨더를 통해서 리시버의 행동의변화를 추가하는데 용이함..<br> 리시버의 하나의 행동만을 분리시킬수있음.. 그래서 어디서든 이를 사용할수있음!!
 	- 커맨드가 행동 하나만을 정의하니, undo메소드와같은경우 핸들링이 쉽고(이놈의상태를 확인하는 작업필요없음), 특정 명령에 일련의 행동들을 나타내야할때도 재사용이 좋음
+	- 리시버에 실제적으로 수행할 여러 기능들이 있을테고, 이러한 기능들을 수행해주는 커맨더(기능별로 커맨더를 따로 만들게되겠지)가 있고, 인보커가 커맨더를 호출하여 결국 리시버의 기능들을 수행함
 	
 - 어뎁터패턴
   - 한 클래스의 인터페이스를 클라이언트에서 사용하고자 하는 다른 인터페이스로 변환하는 패턴. 어댑터를 이용하면 인터페이스 호환성 문제때문에 같이 쓸수 없는 클래스들을 연결해서 사용가능
