디자인패턴 관련 내용추가, Collection 관련 내용추가

--- a/디자인패턴/디자인패턴_헤드퍼스트.md
+++ b/디자인패턴/디자인패턴_헤드퍼스트.md
@@ -146,8 +146,9 @@
     - 템플릿 메소드가 들어있는 추상클래스에서는 구상메소드, 추상메소드, 후크를 정의할수있음
       - 구상메소드도 변경을 막아야한다면 final로 선언!
     - Arrays.sort() 또한 템플릿 메소드 패턴이나, 교과서적인 방식은 아님.. 하지만 분명한것은 strategy패턴은 아님
-    - 스트레이티지패턴과 템플릿메소드 패턴 모두 알고리즘을 캡슐화하는 패턴이지만, 전자는 상속을 사용하고 후자는 구성을 사용함
+    - 스트레이티지패턴과 템플릿메소드 패턴 모두 알고리즘을 캡슐화하는 패턴이지만, 전자는 구성을 사용하고 후자는 상속을 사용함
     - 팩토리 메소드 패턴은 특화된 템플릿 메소드 패턴! (유사하다 싶더니만..)
+    - *알고리즘이있을때 변경이 일어나는 부분을 캡슐화할때 사용하는것이 전략패턴과 탬플릿메소드패턴인데, 이들의 차이는 상속을 통해 변경되는부분을 정의하냐, 아님 구성을 통해 정의하냐의 차이다
 
 - 이터레이터 패턴
   - 컬렉션 구현 방법을 노출시키지 않으면서도 그 집합체 안에 들어있는 모든 항목에 접근할수 있게 해주는 방법을 제공하는 패턴
@@ -166,7 +167,7 @@
     - 부분과 전체를 모두 관리할수있음
     - 구성요소(Component)에는 복합객체(Composite)와 잎(leaf) 이 있는데, 복합객체는 또 다른 구성요소를 가지게된다.(재귀!)
     - Component를 보면 leaf에서 필요한 요소와 복합객체에서 필요한 요소 둘다를 가지고있게되기때문에, 복합객체 입장에서는 불필요한 메소드들이 있을수있다.(leaf도 마찬가지)
-    - 이렇게 Component가 leaf의 역할도하고 복합객체의 역할도 하기때문에, 컴포지트패턴은 단일 역할 원칙을 깨면서 투명성을 확보하기 위한 패턴이다
+    - 이렇게 Component가 leaf의 역할도하고 복합객체의 역할도 하기때문에, 컴포지트패턴은 ***단일 역할 원칙을 깨면서 투명성을 확보***하기 위한 패턴이다
       - 투명성이란, 클라이언트 입장에서 요놈이 복합객체인지 잎인지 알수없는것을 이야기한다.(역할이 명백하지않다.) 
       - 이에반대되는게 안정성인데, 이 안정성을 위해서 instanceof 와 같은 연산자를 통해서 확인은 가능하나 투명성이 떨어지게된다.
     - 자식 노드가 부모노드에 대한 포인터를 집어넣어서 부모노드를 불러올수도있음
@@ -206,7 +207,7 @@
        
     
 - 부록
-  - 브릿지 패턴
+  - 브릿지 패턴 (리모콘을 만드는데, 리모콘을 지원하는 제품들에 대한 사용방법 변경뿐아니라, 리모콘자체도 기능추가나 변화가 필요한경우.. 즉, 리모콘을 각 제품사별로 구현할수있도록 추상화해놨는데, 리모콘 자체도 기능추가와 같은 변경이 필요한경우..)
     - 구현뿐만 아니라 추상화된 부분까지 변경시켜야하는 경우
     - 구현해야하는 대상을 인터페이스로 만들고 이를 구성으로 가져감 + 추상된부분 변경이 필요하다면 추상클래스를 상속하여 변경이 필요한 부분을 구현
       - => 두개의 계층구조(기존에 추상화된 부분 + 기존 구현부를 나타냈던 부분을 인터페이스를 사용함으로 생기는 부분)가 생기게됨! 이 둘의 관계를 브릿지 라고 부름.
@@ -223,7 +224,8 @@
       - 제품의 내부구조를 클라로부터 보호가능
       - 여러 단계와 다양한 절차를 통해서 객체를 만들 수 있음  
     - 단점
-      - 팩토리를 사용하는 경우에 비해 객체를 만들기 위해서 클라이언트에 대해 더 많이 알아야함(무슨말???)
+      - 팩토리를 사용하는 경우에 비해 객체를 만들기 위해서 클라이언트에 대해 더 많이 알아야함
+        - 빌더도 어쨋든 추가해야할 대상을 지정해야하니깐 그런듯..
   - 역할 사슬 패턴
     - 한 요청을 두개 이상의 객체에서 처리하고 싶을때 사용
     - Netty에서 파이프라인의 핸들러들이 이러한 패턴으로 구현되어잇는듯함
@@ -267,9 +269,11 @@
   https://yongdev.tistory.com/131
 
   - visitor 패턴
-    - 방문자(Visitor)에 각 (연관이 매우 깊은)객체(Element)들의 행동을 정의하고 Element가 accpet메서드(일반적으로 accept쓴다함)를 통해서 방문자를 넘겨받으면 이를 수행..  
-    - 콜백 패턴의 변형느낌..
+    - 방문자(Visitor)에 각 (연관이 매우 깊은)객체(Element)를 구현한대상들의 행동을 정의하고 Element가 accpet메서드(일반적으로 accept쓴다함)를 통해서 방문자를 넘겨받으면 이를 수행..  
+    - 방문자에는 Element별로 수행해야할 특정기능(ex. VIP, GOLD, NORMAL 등 Member별로 point혜택이 다르게 적용.. 여기서 Member가 Element이고 혜택이 Visitor)이 정의되어있다.. 그리고 Element에는 visitor를 수행할 메서드하나만 추가(보통 accept이름을 쓰고, visitor가 파라미터)하고 해당 메서드에서는 visitor.method(this)를 수행.. 여기서 this는 Element의 구체화이기때문에 방문자에 Element별로 정의된 기능이 수행된다!! 
+    - 그렇기에 Element의 특정 기능을 추가하고싶을때 visitor 하나만 더 구현해서 파라미터로 넘겨주면 되기때문에 기능추가에 용이하다.. 그러나 Element가 추가될때는 그에 맞추어 visitor도 변경이 필요하다..
+    - 기존 element구조를 수정하지 않고 새로운 동작을 기존 객체에 추가할 수 있다!! => OCP
     - 언제 쓰나?
-      - 적용해야 할 대상 객체가 잘 바뀌지 않고(특히 개수), 적용할 알고리즘이 추가될 가능성이 많은 상황일 때 사용을 고려해봐야 한다. 다시 말하면 Member 등급은 Gold, Vip, Green 으로 고정이거나 추가될 가능성이 작으면서 혜택은 앞으로 계속해서 추가될 가능성이 있을 때를 말한다. 왜냐하면 Member가 추가되면 모든 Benefit 클래스를 수정해야 하기 때문이다.
-      - 또한 대상 객체가 가지는 동작과 객체를 분리해 코드의 응집도를 높이고자 할 때 사용할 수 있다. 멤버별 혜택에 대한 로직을 보기 위해서는 Benefit의 구상 클래스만 보면 쉽게 파악할 수 있다.
+      - 적용해야 할 대상 객체가 잘 바뀌지 않고(특히 개수), 적용할 알고리즘이 추가될 가능성이 많은 상황일 때 사용을 고려해봐야 한다. 예를들면 Member 등급은 Gold, Vip, Green 으로 고정이거나 추가될 가능성이 작으면서 혜택(ex. 등급에 따른 BlackFridayBenefit)은 앞으로 계속해서 추가될 가능성이 있을 때를 말한다. 왜냐하면 Member가 추가되면 모든 Benefit 클래스를 수정해야 하기 때문이다.
+      - 또한 대상 객체가 가지는 동작과 객체를 분리해 코드의 응집도를 높이고자 할 때 사용할 수 있다. 멤버별 혜택에 대한 로직을 보기 위해서는 Benefit의 구상 클래스만 보면 쉽게 파악할 수 있다. (=> Element별 특정 행동들을 응집화)
     - 정리굿 : https://thecodinglog.github.io/design/2019/10/29/visitor-pattern.html
