--- a/java/토비의스프링/토비의 스프링.md
+++ b/java/토비의스프링/토비의 스프링.md
@@ -48,12 +48,17 @@
    
       * 객체지향설계원칙(SOLID) : 객체지향의 특징을 잘 살릴수있는설계의 특징을 이야기함.. 디자인패턴은 이 원칙을 지켜서 만들어진것. 즉, 객체지향설계원칙이 크고 일반적인 개념
          - SRP(The Single Responsibilty Principle) : 단일책임의 원칙
+           - 단일 책임이니, 다른 역할의 기능들이 혼재되어있지 않음으로, 특정 기능을 고쳐야할때 다른 역할의 기능들을 줄줄이 고칠필요없음
          - OCP(The Open Closed Principle) : 개방폐쇄원칙 
          - LSP(The Liskov Substitution Principle) : 리스코프 치환 원칙 
            - "부모 클래스 타입인 A를 사용하는 기존의 프로그램 코드가 자식 클래스 B로 대입 시켰을 때도 문제 없이 작동하도록 하기 위해서, 자식 클래스는 부모 클래스가 따르던 계약 사항을 자식도 따라야한다" 는 원칙
            - https://pizzasheepsdev.tistory.com/9#:~:text=%EB%A6%AC%EC%8A%A4%EC%BD%94%ED%94%84%20%EC%B9%98%ED%99%98%20%EC%9B%90%EC%B9%99%20(LSP%3A%20Liskov%20Substitution%20Principle)&text=%EC%9D%B4%EC%A0%84%EA%B3%BC%20%EB%A7%88%EC%B0%AC%EA%B0%80%EC%A7%80%EB%A1%9C%20%EC%9D%B4%20%EC%9B%90%EC%B9%99,%EC%97%90%20%EB%AC%B8%EC%A0%9C%EA%B0%80%20%EC%97%86%EC%96%B4%EC%95%BC%20%ED%95%9C%EB%8B%A4'.
          - ISP(The Interface Segregation Principle) : 인터페이스분리원칙
+           - 클라이언트의 목적과 용도에 적합한 인터페이스만을 제공하는것!
+           - 이를 통해서, 클라이언트와 오브젝트간에 관계를 명확하게 할수있다!
          - DIP(The Dependency Inversion Principle) : 의존관계 역전 원칙 
+           - 구상클래스에 의존하는것이 아닌(new 범벅..), 추상화된것에 의존하도록 만들기! (팩토리 메서드 패턴도 이 원칙에 맞을것이고, 스프링 컨테이너를 통해 구상클래스를 주입받는것도 이 원칙에 맞음..)
+           - new를 통해 직접 생성하고 그것에 의존하는것이 아닌, 추상화(인터페이스)에 의존하게되면, 인터페이스를 구체화한 대상을 전달받아야하고, 보통 이를 펙토리에서 전달받게되는 즉, 외부로부터 전달받게되므로 의존관계는 뒤집히게됨..
          
       * 디자인 패턴 : 특별한 상황에서 발생하는 문제에 대한 구체적인 솔루션
    - 높은 응집도와 낮은 결합도
@@ -384,6 +389,8 @@
         - PROPAGATIOIN_REQUIRED : 이미 시작된 트랜잭션이 있으면 참여
         - PROPAGATIOIN_REQUIRED_NEW : 앞에 시작된 트랜잭션이 있던지 상관없이 새로운 트랜잭션 시작
         - PROPAGATIOIN_NOT_SUPPORTED : 트랜잭션 적용무시
+          - 트랜잭션을 사용하지 않게 한다. 이미 진행 중인 트랜잭션이 있으면 보류시킨다.
+        - [종류 정리](https://oingdaddy.tistory.com/28)
         - 이에 대한 설정을 기반으로 트랜잭션 메니저의 getTransaction()호출시 새로운 트랜잭션을 만들지 말지를 결정
       - 격리수준
       - 제한시간
@@ -403,7 +410,7 @@
     - 단위 테스트와 통합테스트 (토비스프링에서 아래와같이 정의해서 부른다고 하겠다하지만 통용되는듯함)
       - 단위테스트 : 테스트 대역을 이용해 의존 오브젝트나 외부의 리소스를 사용하지 않도록 고립시켜서 테스트 하는것
       - 통합테스트 : 두개 이상의 성격이나 계층이 다른 오브젝트가 연동하도록 만들어 테스트하거나, 외부의 DB나 파일, 서비스 등의 리소스가 참여하는 테스트 
-      - 가이드
+      - 가이드s
         - 항상 단위테스트 먼저 고려할것
         - 하나의 클래스나 성격과 목적이 같은 긴밀한 클래스 몇개를 모아서 외부와의 의존관계를 모두 차단하고 필요에 따라 스텁이나 목 오브젝트등의 테스트 대역을 이용하도록 테스트를 만들것
         - 외부 리소스 사용해야만 가능한 테스트는 통합테스트로 만들것
