디자인패턴 내용보완

--- a/디자인패턴/디자인패턴_헤드퍼스트.md
+++ b/디자인패턴/디자인패턴_헤드퍼스트.md
@@ -87,6 +87,13 @@
     - 필요한, 연관된 객체들을 모으는 개념..?
     - 객체 생성이 팩토리 인터페이스에서 선언한 메소드들에서 구현
   - => 둘다 객체 생성을 캡슐화하기 위한 것이며, 클라이언트와 구상클래스가 서로 분리된 유연한 디자인을 구현할수 있게 해준다..(직접 new 안쓴다는 말인듯..?)  
+  - 비슷한점
+    - 둘다 구체적인 객체 생성 과정을 추상화한 인터페이스를 제공한다.
+  - 다른점
+    - 팩토리 메소드 패턴은 팩토리를 구현하는 방법 (inheritance)에 초점을 둔다.
+    - 추상 팩토리 패턴은 팩토리를 사용하는 방법 (composition)에 초점을 둔다.
+    - 팩토리 메소드 패턴은 구체적 객체 생성 과정을 하위 또는 구체적 클래스로 옮기는 것이 목적이다.
+    - 추상 팩토리 패턴은 관련있는 여러 객체를 구체적인 클래스에 의존하지 않고 만들 수 있게 해주는 것이 목적이다.
 
 
 - 싱글턴 패턴
@@ -211,10 +218,13 @@
     - 구현뿐만 아니라 추상화된 부분까지 변경시켜야하는 경우
     - 구현해야하는 대상을 인터페이스로 만들고 이를 구성으로 가져감 + 추상된부분 변경이 필요하다면 추상클래스를 상속하여 변경이 필요한 부분을 구현
       - => 두개의 계층구조(기존에 추상화된 부분 + 기존 구현부를 나타냈던 부분을 인터페이스를 사용함으로 생기는 부분)가 생기게됨! 이 둘의 관계를 브릿지 라고 부름.
+    - 추상화한놈이 포함관계이있는 인터페이스로 가지고있기때문에, Client는 추상화한놈을 통해서 간접적으로 포함된 인터페이스를 실행시킬수있음..
+      - 추상화한놈을 독립적으로 확장할수있고, 포함관계에 있는 인터페이스도 독립적으로 확장할수있는 형태이며 이 둘을 bridge와 같이 연결해놓았기때문에 브릿지패턴
     - 장점
       - 구현을 인터페이스에 완전히 결합시키지 않았기때문에 구현과 추상회된 부분을 분리가능(브릿지 관계)
       - 추상화된 부분과 실제 구현부분을 독립적으로 확장 가능(계층이 따로 분리되어있는 상태이므로가능)
       - 추상화된 부분을 구현한 구상 클래스를 바꿔도 클라이언트 쪽에는 영향 끼치지않음(추상화된 부분의변경 요청이 있을때 구상클래스를 통해 확장가능하며 기존 클라이언트 쪽에 영향 없음)
+        - client는 추상화된 놈을 바라보고있으니.. 당연 영향 없음
     - 단점
       - 디자인 복잡해짐...
   - 빌더 패턴
