--- a/디자인패턴/디자인패턴_헤드퍼스트.md
+++ b/디자인패턴/디자인패턴_헤드퍼스트.md
@@ -286,4 +286,9 @@
     - 언제 쓰나?
       - 적용해야 할 대상 객체가 잘 바뀌지 않고(특히 개수), 적용할 알고리즘이 추가될 가능성이 많은 상황일 때 사용을 고려해봐야 한다. 예를들면 Member 등급은 Gold, Vip, Green 으로 고정이거나 추가될 가능성이 작으면서 혜택(ex. 등급에 따른 BlackFridayBenefit)은 앞으로 계속해서 추가될 가능성이 있을 때를 말한다. 왜냐하면 Member가 추가되면 모든 Benefit 클래스를 수정해야 하기 때문이다.
       - 또한 대상 객체가 가지는 동작과 객체를 분리해 코드의 응집도를 높이고자 할 때 사용할 수 있다. 멤버별 혜택에 대한 로직을 보기 위해서는 Benefit의 구상 클래스만 보면 쉽게 파악할 수 있다. (=> Element별 특정 행동들을 응집화)
+      - ConcreteVisitor를 추가하는것은 Element에 대하여 새로운 기능을 추가하는것
+        - visitor는 element가 수행할기능을 집합해놓은것.. (오버로딩.. 그러나 그냥 오버로딩말고 메소드명으로 지정해도 노 상관)
+      - Client는 element.accept(visitor) 를 호출해주는데, 이게 visitor에 대한 확장은 가능하고 기존소스변경이 없기때문에 OCP에 충실한것!
+        - 그러나 Element가 추가 또는 삭제되면 모든 Visitor에 변경이 일어나게됨.. 그렇기에 Element가 고정 + Element의 기능추가필요할때 사용하기 좋은패턴
     - 정리굿 : https://thecodinglog.github.io/design/2019/10/29/visitor-pattern.html
+      - https://velog.io/@2yeseul/%EB%94%94%EC%9E%90%EC%9D%B8-%ED%8C%A8%ED%84%B4-Visitor
