공부한 내용 추가

--- a/java/modern_java/모던자바인액션.md
+++ b/java/modern_java/모던자바인액션.md
@@ -167,7 +167,10 @@
       - 익명함수 : 
       - 메서드참조 
       - 익명클래스 : 
-      - 리엑티브 프로그래밍 : 
+      - 리엑티브 프로그래밍 : 변화가 일어나면 그에대해 반응하는 방식으로 프로그래밍하는것. 이를 위해 리엑티브 스트림즈에서 표준을 만들어놓았고 pub-sub 구조를 사용. 스프링은 project reactor라는 라이브러리를 가져다가 사용하였고, 이벤트가 발생하게되면, 발행하는 상위스트림에서 이를 구독하는 하위스트림으로 오퍼레이터를 거쳐 진행하게된다. 
+        - project reactor를 보면 선언형으로 되어있기에 가독성 측면에서 좋을뿐아니라, 수많은 오퍼레이터를 제공해줌으로써 개발자가 일일이 멀티스레드와 같은 로우레벨의 코드를 직접 개발하지않고 최적의 성능을 가지고 비지니스 로직을 개발할수있다.
+        - 하지만, 이에 따라 디버깅이 쉽지않다
+        - 참고 괜찮음 : https://luv-n-interest.tistory.com/1279
       - 리엑티브 스트림즈 : 
       - https://mangkyu.tistory.com/111
       - https://dinfree.com/lecture/language/112_java_9.html
