--- a/java/토비의스프링/토비의 스프링2.md
+++ b/java/토비의스프링/토비의 스프링2.md
@@ -1459,6 +1459,8 @@
     - 인터페이스 타입의 프로퍼티(setXXX 함수) 있으면, 구현체들이 무엇이 있는지 확인해볼것!!
     - RestTemplate도 RMI의 하나라는거..
       - [RestTemplate 개념 및 사용방법 정리 굿](https://sjh836.tistory.com/141)
+      - 커넥션풀 셋팅 : https://minkwon4.tistory.com/216
+        - 설명굿 : https://nesoy.github.io/articles/2020-05/RestTemplate
     - ClassPathResource : 지정한 클래스 기준으로 설정파일 경로 셋팅가능
 
 
