--- a/기타/정규표현식.md
+++ b/기타/정규표현식.md
@@ -23,7 +23,7 @@ https://soooprmx.com/archives/7718
 
         Matcher matcher = compile.matcher(multi);
         assertTrue(matcher.lookingAt()); //matcher.lookingAt() => "^[Pattern]" , 앞에가 일치해야하기 때문에 하나만나옴!
-        System.out.println(matcher.group(1));
+        System.out.println(matcher.group(1)); //group은 위에 캡처링 그룹을 의미.. 0번 index는 해당 문자열 전체를 의미하고, 1번 index 부터는 캡처링 그룹된것들
 
         Matcher matcher2 = compile.matcher(multi);
         while(matcher2.find()){ //matcher.find() => "[Pattern]" , 이렇기때문에 find는 패턴이 일치하는게 여러개 나올수있음! 그래서 find 호출하면 다음 일치하는걸로 넘어간다!
@@ -105,6 +105,12 @@ https://soooprmx.com/archives/7718
   - 캡쳐된 그룹은 Matcher#group(i) 로 가져왔지만, $1, $2 로도 표현 가능
   - 따라서 group(1) = $1 = 나 
   - group(2) = $2 = 개 or 새 ... 등이므로 "$2는 $1입니다" 는 "개는 나입니다" 가 됨
+  - 이는 모두 캡처했기때문에 $2와 $1 로 했을때 변환이 가능한것! 위에 예제에 (:?)을 사용하게된다면 아래와같다
+    ```java
+            for(String s : as ) {
+                System.out.println(s.replaceAll("(:?.*)는 (.*)입니다", "$2는 $1입니다")); // $2는 개입니다
+             }
+    ```
 
 - 그룹에 이름 지정 가능
     ```java
@@ -117,3 +123,8 @@ https://soooprmx.com/archives/7718
   - https://stackoverflow.com/questions/415580/regex-named-groups-in-java
 
 [출처](https://dogcowking.tistory.com/230) 
+
+
+- capturing group
+  - capturing group과 non-capturing group은 찾아주는것에 있어서는 동일하나, Matcher가 기억하고있느냐 없느냐의 차이..(굳이 핸들링이 필요없는것은 기억할 필요가없겟지!)
+- [출처](https://blog.rhostem.com/posts/2018-11-11-regex-capture-group)
