공부한내용 추가

--- a/java/modern_java/모던자바인액션.md
+++ b/java/modern_java/모던자바인액션.md
@@ -698,6 +698,7 @@
             - 블록 할수잇는 태스크는 스레드 풀에 제출하지 말아야 한다는 것이지만 항상 이를 지킬수없음..ㅠ
             - 데드락 걸릴수도있다함..
               - ex. 싱글스레드풀일때, 처음 실행했던 태스크가 해당 태스크내부에 새로운 태스크를 실행시키고 새로운 태스크의 결과를 기다리고 있게된 상황.. (스레드가 부족해서 나타남)
+                - 데드락 부분에서 스레드 덤프를해봤더니, 스레드풀에 스레드가 모자라서 생기는 데드락 현상같은 경우 스레드 덤프로 봤을때 새로이 생성된 테스크랑 어떤 경합이 있는지는 알 수 없고, 스레드가 하나밖에없으니 이를 점유하고있는 놈이 한없이 waiting 하고있는걸 보고 추론가능함.;
               ```java
                 public class ThreadDeadLock {
                   static ExecutorService executorService= Executors.newSingleThreadExecutor();
