--- a/java/spring/스프링 시큐리티.md
+++ b/java/spring/스프링 시큐리티.md
@@ -17,3 +17,5 @@
 - [조대협 REST API 보안 (HAMC포함) 관련내용](http://bcho.tistory.com/807)
 
 - jwt는 claim기반의 토큰 방식인데, claim이라는 사용자에 대한 프로퍼티나 속성을 지니게 되는것을 이야기함.. 즉, jwt는 토큰에 사용자 정보가 담겨있다!
+
+- [스프링시큐리티 filter 설명](https://limdevbasic.tistory.com/19)
