--- a/java/토비의스프링/토비의 스프링2.md
+++ b/java/토비의스프링/토비의 스프링2.md
@@ -1632,3 +1632,18 @@
   ------
   - 스프링 기타 발견내용
     - `@Inherited` 가 어노테이션에 선언되어있다면, 해당 어노테이션을 부모에 선언하였다면 자식들도 따라가게된다는뜻
+    - [OncePerRequestFilter와 Filter의 차이](https://minkukjo.github.io/framework/2020/12/18/Spring-142/)
+  - spring xml 설정
+    - `mvc:annotation-driven` ( 출처 : https://velog.io/@hanblueblue/Spring-mvcannotation-driven )
+      - `message-converters`
+        - http 요청메세지 본문과 http 응답메세지 본문을 어떻게 컨버팅할것인가
+      - `argument-reslovers`
+        - 컨트롤러에 들어가기 전에 클라이언트로부터 받은 파라미터들을 원하는 것으로 가공해서 컨트롤러로 전달
+        - `HandlerMethodArgumentResolver`를 구현한 클래스를 사용해야함
+      - `async-support`
+        - 비동기 사용을 위한 설정셋팅
+        - 자세한내용은 출처참고
+      - `path-matching`
+      - `return-value-handlers`
+  - 톰캣의 jsessionid 만드는 방법
+    - https://semtax.tistory.com/92
