공부한 내용 추가

--- a/기타/정규표현식.md
+++ b/기타/정규표현식.md
@@ -12,7 +12,7 @@ https://soooprmx.com/archives/7718
 ```java
     @Test
     void testRegEx(){
-        String regEx="(?:https?:\\/\\/)?(?:www\\.)?youtu.be\\/([-\\w]+)";
+        String regEx="(?:https?:\\/\\/)?(?:www\\.)?youtu.be\\/([-\\w]+)"; // (?:~~) 캡쳐안한다는뜻
 
         Pattern compile = Pattern.compile(regEx);
 
@@ -128,3 +128,5 @@ https://soooprmx.com/archives/7718
 - capturing group
   - capturing group과 non-capturing group은 찾아주는것에 있어서는 동일하나, Matcher가 기억하고있느냐 없느냐의 차이..(굳이 핸들링이 필요없는것은 기억할 필요가없겟지!)
 - [출처](https://blog.rhostem.com/posts/2018-11-11-regex-capture-group)
+
+- [나름 상세한 설명](https://gocoding.tistory.com/93)
