공부한 내용 추가

--- a/기타/정규표현식.md
+++ b/기타/정규표현식.md
@@ -53,6 +53,8 @@ https://soooprmx.com/archives/7718
 | `[]`     | 문자셋, 괄호안의 어떤 문자든           |
 | `[^]`    | 부정 문자셋, 괄호안의 어떤 문가 아닐때 |
 | `(?:)`   | 찾지만 기억하지는 않음                 |
+| `(?=)`   | 앞쪽 문자열을 기준으로 그룹 조건을 만족하는 지를 비교(비캡쳐링)   |
+| `(?!)`   | 앞쪽 문자열을 기준으로 그룹 조건을 만족하지 않는 지를 비교(비캡쳐링) |
 
 ### Quantifiers
 
@@ -86,6 +88,16 @@ https://soooprmx.com/archives/7718
 | `\W`     | word 문자 아님               |
 | `\s`     | space 공백                   |
 | `\S`     | space 공백 아님              |
+
+
+### Flag
+| Chracter | 뜻                           |
+| -------- | ---------------------------- |
+| `g`      | 매칭되는 모든 문자열 탐색        |
+| `i`      | 대소문자를 구분하지 않음 |
+| `m`     | 행 구분없이 문자열 탐색          |
+| `u`     | ASCII가 아닌 유니코드를 처리       |
+
 
 - 출처 : https://github.com/dream-ellie/regex
 
@@ -124,9 +136,31 @@ https://soooprmx.com/archives/7718
 
 [출처](https://dogcowking.tistory.com/230) 
 
+- 특정문자열 제외하기 (좀 더 이해한뒤에 수정하기..)
+  - `/^((?!문자열).)*$/gm`
+    - "문자열"이 아닌 놈인데, 그 그룹 앞에 아무것도 없어야하고 `(?!문자열)`
+      - "(?!" 앞에 아무것도없음!
+    - 그 다음에 아무 문자나 오는 그룹이`((?!문자열).)`
+    - 0개 이상있으면 `((?!문자열).)*`
+    - 되는데, 하나의 line의 시작과 끝을 나타내고 `/^((?!문자열).)*$/m`
+    - 하나만 찾는게 아닌, 모든 인덱스 찾아라 `/^((?!문자열).)*$/gm`
+  - https://stackoverflow.com/questions/406230/regular-expression-to-match-a-line-that-doesnt-contain-a-word
+    - 정확하게 이해안감.. 나중에 확인 더 필요..
+
+- Quantifiers 뒤에 오는 "?" 의 의미
+  - `<em>Hello World</em>`에서 태그만 찾고싶다면, 정규표현식 `<.+>`을 사용할것이다
+  - 그러나, 실제로 그렇게 사용하게되면, 태그만 선택되는게 아닌, 위 문장 전체가 선택된다..
+  - 이는 처음찾은 `<`과 맨 마지막에 찾은 `>` 을 기준으로 선택되기떄문(greedy 방식이라고함)
+  - 그러나, 뒤에 "?"를 추가하여 `<.+?>` 이렇게 정규표현식을 사용하게되면, `<`을 찾고 바로 처음에 나오는 `>`을 찾게된다.. 그래서 태그만 찾아낼수있다! (lazy 방식)
+    - 'Greedy' means match longest possible string.
+    - 'Lazy' means match shortest possible string.
+  
+  - [참고사이트](https://stackoverflow.com/questions/2301285/what-do-lazy-and-greedy-mean-in-the-context-of-regular-expressions)
 
 - capturing group
   - capturing group과 non-capturing group은 찾아주는것에 있어서는 동일하나, Matcher가 기억하고있느냐 없느냐의 차이..(굳이 핸들링이 필요없는것은 기억할 필요가없겟지!)
 - [출처](https://blog.rhostem.com/posts/2018-11-11-regex-capture-group)
 
 - [나름 상세한 설명](https://gocoding.tistory.com/93)
+
+- [매우매우굿](https://velog.io/@koseungbin/%EC%A0%95%EA%B7%9C-%ED%91%9C%ED%98%84%EC%8B%9D)
