--- a/java/토비의스프링/토비의 스프링2.md
+++ b/java/토비의스프링/토비의 스프링2.md
@@ -1173,6 +1173,7 @@
         - WebMvcConfigurer는 인터페이스.. 이를 구현해서 빈으로 등록되어야 빈 설정자로 사용가능 
           - WebMvcConfigurer 로 구현하는 내용들은 p659참고
           - 모두 구현하기 귀찮으면 WebMvcConfigurerAdatper 를 상속해서 필요한것만 오버라이딩하면됨
+          - WebMvcConfigurer는 여러개 등록되어도 된다. 여러개 등록되면 빈 설정자(Configurer)를 통해 등록한 설정정보들이 모두 사용된다! (그렇기에, 용도에 맞는 설정자를 셋팅해놓고 필요에 따라서 설정클래스에 등록해서 사용하는게 좋겠지 ex. SecurityConfigurer, CustomerHnadlerConfigurer..)
         - WebMvcConfigurationSupport 는 클래스이기때문에 상속해서 사용. 디폴트 인프라빈들을 @Bean으로 등록해놓았기때문에, 커스텀할때 용이하다
           - WebMvcConfigurer에서 configure로 시작하는 함수들을 오버라이딩하면 기본적으로 등록되어야하는 디폴트 빈들이 아예 무시가 되어버리는데, WebMvcConfigurationSupport는 @Bean으로 이미 등록되어져잇기때문에 "추가"의 개념으로 등록됨
       - *스프링은 @Enable 전용 애노테이션으로 등록되는 인프라 빈에 대한 추가 설정을 위해 설정용 빈을 활용하는 방법을 제공한다
