공부한 내용 추가

--- a/네트워크/기타 네트워크관련 정리.md
+++ b/네트워크/기타 네트워크관련 정리.md
@@ -29,6 +29,9 @@
 - read timeout
   - 커넥션은 정상적으로 맺어졌지만, 클라이언트가 요청 후 일정시간동안 서버로부터 응답이 없을떄 나타나는 타임아웃
 
+- [여기도 참고하기 괜춘](https://tyrionlife.tistory.com/790)
+- [타임아웃 시간은 어느정도가 적절한지..](https://alden-kang.tistory.com/20#:~:text=%EA%B3%A0%EB%A0%A4%ED%95%B4%20%EB%B3%BC%20%EC%88%98%20%EC%9E%88%EB%8A%94%20%EA%B2%BD%EC%9A%B0,%EC%9D%B4%20%EC%9C%A0%EC%8B%A4%20%EB%90%98%EC%97%88%EC%9D%84%20%EB%95%8C%20%EC%9E%85%EB%8B%88%EB%8B%A4.)
+
 ----
 - ServerSocket 
   - 초기순서
@@ -65,7 +68,7 @@
       - 세번째 컬럼: 실제 패킷을 처리할때 소모된 시간이 `net.core.netdev_budget` 값을 초과한 횟수 (주어진 시간동안 처리 못한 경우)
   - listen 함수의 backlog
     - 완전한 커넥션이 맺어진(즉, 3 way handshake가 완료된) 소켓이 accpet 되기를 기다리는 동안 대기하는 장소가 backlog queue이고 이 크기를 listen메소드에 인자값으로 넘겨줄수있다
-      - `/proc/sys/net/core/somaxconn`에 지정한 값보다 인자값이 크게되면 무시됨
+      - `/proc/sys/net/core/somaxconn`에 지정한 값보다 인자값이 크게되면 무시됨. min(somaxconn, backlog)
         - `net.core.somaxconn`
           - accept()을 기다리는 ESTABLISHED 상태의 소켓(즉, connection completed)을 위한 queue (TCP 3-way-handshake 끝남)
     - 그러나, 커넥션이 완전히 맺어지지않은 소켓은 `/proc/sys/net/ipv4/tcp_max_syn_backlog` 에 지정한 값의 크기를 지닌 큐에 저장된다.
@@ -78,6 +81,11 @@
                - `net.core.somaxconn` : 700
                - `net.ipv4.tcp_max_syn_backlog` : 16000
                - 이렇게 되어있다면, 셋중 가장 작은 값이 512이고, 512에 1을 더한 513을 올림하여 가까운 2의 제곱수는 1024이므로 syn backlog queue는 1024가 된다..
+               - => 근데.. 이거 좀 이상함.. ss로 확인해봣을때 1000 으로 확인되는것도 있다.. 아래 두개 확인필요
+                 - ss명령어의 send-q는 syn backlog queue를 말하는건가?
+                   - => no! send-q는 accept queue 사이즈를 말한다
+                 - accept queue size는 listen함수 호출시 전달해주는 BACKlog 값과 somaxconn과 비교해서 최소인걸 선택하나?
+                   - => ok
          - SYN 큐는 클라이언트에서 보낸 SYN 큐를 저장하기 위한 큐입니다. 또한 SYN+ACK 패킷을 보내고 ACK를 받지 못한 경우 SYN+ACK패킷 전송을 재시도하는 역할을 합니다. 리눅스의 변수값 중에서는 net.ipv4.tcp_synack_retries로 설정할 수 있습니다.
            - 서버가 SYN+ACK패킷을 보낸 후에 일정시간동안 ACK를 받지 못하면 다시 SYN+ACK 패킷을 보냅니다. 재시도할 때의 delay는 서버가 exponential backoff 알고리즘을 통해 설정합니다. 커널의 세팅 중에서는 net.ipv4.tcp_synack_retries 값이 영향을 주는데, 이 설정값의 기본값은 5입니다. 총 횟수가 5번이기 때문에 delay는 1초, 3초, 7초, 15초, 31초가 되고 총 63초가 지나면 타임아웃이 발생합니다. 다시 말하면 SYN을 받은 서버는 연결을 생성하고 SYN backlog 큐에 넣은다음 최대 63초동안이나 기다린다는 의미입니다. 
            - 이 때 SYN backlog 큐의 사이즈가 작으면 문제가 발생합니다. 기다리는 연결들로 큐가 금방 꽉차게 되고 1분 넘게 기다려서야 기존의 연결이 타임아웃이 나서 지워지기 때문에, 이후에 갑자기 대규모 트래픽이 발생하면 더이상 SYN backlog 큐에 자리가 없어서 장애가 발생하게 됩니다.
@@ -100,7 +108,55 @@
             2.4.25, this limit was a hard coded value, SOMAXCONN, with the
             value 128.
         ```
-   
+  - [backlog 관련 매우 로우레벨 설명.. 아직 백퍼 이해안감..](https://stackoverflow.com/questions/63232891/confusion-about-syn-queue-and-accept-queue) 
+    - 뭔가.. syn backlog queue는 실재하지않는것같은 뉘앙스..
+  - [여기도 영어긴하지만.. 설명 좋음](https://www.alibabacloud.com/blog/tcp-syn-queue-and-accept-queue-overflow-explained_599203)
+    - Accept queue가 가득차면, client가 마지막으로 ACK를 보낼때, 이를 버려버린다.. 그러나 클라이언트는 연결된줄 알고 계속 데이터보내지만, 서버는 아직 ACK를 받지못한상태이기떄문에 SYN,ACK를 다시보낸다..(Accept queue에 자리 날떄까지!)
+    - [SYN Queue and Accept Queue](./syn_queue_and_accept_queue_with_3wh.png)
+      - case1
+        - Config
+          - backlog: 1024, somaxconn: 1024, tcp_max_syn_backlog: 128
+          - maximum length of syn queue: 256 (이건 계산이 필요한데, 위에 설명 참고)
+          - tcp_syncookies: 0
+        - 결과
+          - syn queue는 96개만 받을수 있음. (SYN_RECV 상태가 96개)  
+            - <span style="color:red">이거이해안감..</span>
+      - case2
+        - config
+          - backlog: 1024, somaxconn: 128, tcp_max_syn_backlog: 512
+          - maximum length of syn queue: 256 
+          - tcp_syncookies: 0
+        - 결과
+          - maximum length of syn queue가 accept queue보다 클때, 실제 syn queue는 accept queue 사이즈를 넘으면 syn요청을 DROP 한다
+          - 즉, syn queue는 128개만 받을수 있다 (SYN_RECV 상태가 128개)
+      - case3
+        - config
+          - backlog: 1024, somaxconn: 128, tcp_max_syn_backlog: 512
+          - maximum length of syn queue: 256 
+          - tcp_syncookies: 1
+        - 결과
+          - 이론적으로는 tcp_syncookies가 1이기때문에 SYN를 Drop하지않는데, Case2와 동일하게 나타난다함
+          - 다른조건 모두 동일하나,somaxconn를 5로변경했을때 syn queue는 5개까지 받음
+      - case4
+        - config
+          - backlog: 1024, somaxconn: 256, tcp_max_syn_backlog: 128
+          - maximum length of syn queue: 256 
+          - tcp_syncookies: 1
+        - 결과
+          - syn queue는 256개만 받을수 있다 (SYN_RECV 상태가 256개)
+      - 결론
+        - tcp_max_syn_backlog가 아무리커도, somaxconn의 크기보다 syn queue size는 커질수없다..
+        - 그렇다면 어떻게 connection timeout을 막을수있나? (Syn queue overflow or accept queue overflow 되었을때..)
+          - 서버의 backlog 사이즈 설정을 늘린다 (accept queue 사이즈 증가)
+            - somaxconn 사이즈도 늘려줘야한다.. somaxconn 사이즈보다 크면 의미없다..
+          - tcp_max_syn_backlog 또한 적절히 늘려주자.
+            - 하지만 이 또한 somaxconn 사이즈 크면 작으면 의미없다..
+          - `net.ipv4.tcp_abort_on_overflow` 설정을 1로 두어서, accept queue에 쌓아두지말고 바로 RST를 응답하여 소켓을 끊어버리자
+            - 0: If the accept queue is full, the Server side DROP ACK from the Client side.
+            - 1: If the accept queue is full, the Server side sends an RST message to the Client side to terminate the TCP socket link 
+    - Many blogs say that the maximum length of the SYN queue is specified by the /proc/sys/net/ipv4/tcp_max_syn_backlog parameter. In fact, only when the linux kernel version is earlier than 2.6.20, the SYN queue is equal to the size of the backlog.
+      - 리눅스 커널 버전이 2.6.20 이전일 때만 SYN 큐는 백로그의 크기와 같다.
+    
   - [backlog 설명 및 네트워크 커널 튜닝설명 굿 - 위 글은 거의 여기서 참고](https://brunch.co.kr/@jehovah/23)
   - [backlog 로우레벨 설명 굿인것 같은데.. 내용이 좀 틀리는것같음.. sync backlog queue 갯수 설명은 굿!](https://brunch.co.kr/@alden/6)
     - nginx에서 syn 백로그 늘리는 방법 설명나옴
