커맨드패턴 내용추가

--- a/디자인패턴/디자인패턴_헤드퍼스트.md
+++ b/디자인패턴/디자인패턴_헤드퍼스트.md
@@ -122,6 +122,8 @@
 	- 인보커를 사용해서 인보커에 구성되어있는 커맨더를실행.. 커맨더는 리시버의 특정 행동을 실행<br> 결국, 인보커는 리시버가 어떤 행동을 하는지 자세히는 알수없으나, 행동을 실행은 시켜주는놈..<br> 하나의 리시버에 여러개의 커맨더를 가질수있으며, 이러한 여러 커맨더를 통해서 리시버의 행동의변화를 추가하는데 용이함..<br> 리시버의 하나의 행동만을 분리시킬수있음.. 그래서 어디서든 이를 사용할수있음!!
 	- 커맨드가 행동 하나만을 정의하니, undo메소드와같은경우 핸들링이 쉽고(이놈의상태를 확인하는 작업필요없음), 특정 명령에 일련의 행동들을 나타내야할때도 재사용이 좋음
 	- 리시버에 실제적으로 수행할 여러 기능들이 있을테고, 이러한 기능들을 수행해주는 커맨더(기능별로 커맨더를 따로 만들게되겠지)가 있고, 인보커가 커맨더를 호출하여 결국 리시버의 기능들을 수행함
+	- 인보커는 작업을 요청하는것.. 실제 구체적인 작업내용이 있는곳은 리시버.. 인보커가 커맨드객체에 수행요청을하면, 커맨드객체가 리시버의 작업 메서드를 호출.. 즉, 커맨드 객체가 이어주는 역할..
+  	- 작업의 요청과 실제 작업하는것을 분리하는것의 장점은 결국 작업에 대한 확장이 필요할때, 작업요청하는쪽의 소스는 고치지않을수있다!
 	
 - 어뎁터패턴
   - 한 클래스의 인터페이스를 클라이언트에서 사용하고자 하는 다른 인터페이스로 변환하는 패턴. 어댑터를 이용하면 인터페이스 호환성 문제때문에 같이 쓸수 없는 클래스들을 연결해서 사용가능
