공부한 내용 추가

--- a/java/토비의스프링/토비의 스프링2.md
+++ b/java/토비의스프링/토비의 스프링2.md
@@ -718,7 +718,7 @@
             - 참고로 ***타입***을 기준으로 이름을 만든다!(User 클래스이기때문에 user라는 이름이 들어간것!)
       - @ModelAttribute
         - 메소드 파라미터 레벨에서 사용할때
-          - URL 쿼리 스트링, 또는 폼데이터(Post의 body로 넘어오는..) 를 오브젝트에 바인딩해서 컨트롤러에 전달 + 모델에 자동으로 등록(타입의 이름이 모델의 key값으로 들어감)
+          - URL 쿼리 스트링, 또는 폼데이터(Post의 body로 넘어오는..) 를 오브젝트에 바인딩해서 컨트롤러에 전달 + `모델에 자동으로 등록`(타입의 이름이 모델의 key값으로 들어감)
             - ModelAttribute 는 이름에서도 알 수 있듯이 view에서 보여주는 정보가 담긴 모델에 들어가는 값인데, 사용자가 요청한 데이터를 일회성이 아니라 수정하거나 혹은 다시 돌려줘야할때 @ModelAttribute를 사용!!
           - 생략 가능하긴하나, 여러 파라미터들을 받아야한다면, 각 파라미터들에 애노테이션을 달아줄것!
             - ex. public void test(@ModelAttribute User user, @RequestParam id ...)
@@ -1156,7 +1156,8 @@
         - Model에 데이터 넣어서 Redirect하면, 자동으로 파라미터가 추가되어 전달한다(쿼리 스트링으로) 그런데, 전달하고자 하는 정보외에도 기본적으로 model에 추가되는 정보가 있을때 불필요하게 파라미터를 전달하게 되는데(ex. 메소드레벨에 선언된 @ModelAttribute 내용..), 이를 막기위해 RedirectAttributes를 사용한다(RedirectAttributes는 Model의 서브타입) 즉, addAttribute("key","value") 로 넣은 값만 쿼리스트링으로 넘어간다
           - <span style="color:red"> springboot 2.4.5 확인해본결과 redirect하면 특별히 넘겨줄 파라미터 제외하고 model에 데이터 안넣음.. 개선된듯.. </span>
         - RedirectAttributes 로 플래시 애트리뷰트 또한 사용가능한데, addFlashAttribute("key","value") 로 사용하면됨
-        - 당연히 메소드 파라미터로 전달받는것!
+        - ~~당연히 메소드 파라미터로 전달받는것!~~
+          - 전달받을때는 `RequestContextUtils.getInputFlashMap` 으로 가져올수있음
       - 3.1의 확장포인트 (RequestMappingHandlerAdpater로 변경되었으니 확장하는 클래스도 변경!)
         - HandlerMethodArgumentResolver
           - 메소드 파라미터 확장하기 위해 사용
