--- a/네트워크/기타 네트워크관련 정리.md
+++ b/네트워크/기타 네트워크관련 정리.md
@@ -5,6 +5,8 @@
     - 그래서 즉시 시작을 하기위해서는 해당 옵션을 적용하여야한다.. (bind단계에서 커널이 가져간 소유권을 돌려받을수있다)
     - `tcp_tw_reuse` 와는 다른개념이다..! 
       - 이는 서버가 아닌 클라이언트에 적용되는 개념
+    - 자바에서 서버소켓 ReuseAddress 셋팅시 주의사항
+      - [자바사용시 주의사항](./java_serverSocket_reuseAddress.png)
   - timestamp (net.ipv4.tcp_timestamps)
     - 재사용을 위해서는 서버와 클라이언트가 해당 옵션이 반드시 켜져잇어야한다
     - `net.ipv4.tcp_tw_reuse`를 활성화하면, 새로운 타임스탬프가 기존 커넥션의 가장 최근 타임스탬프보다도 큰 경우 TIME_WAIT 상태인 커넥션을 재사용
