공부한 내용 추가

--- a/개발방법론/도메인 주도설계 철저입문.md
+++ b/개발방법론/도메인 주도설계 철저입문.md
@@ -162,3 +162,19 @@
       - 이를 남용해서 null이 되면 안되는곳에도 optional을 쓰진말자..
     - 참고사항
       - 해당 책에서는 C# ORM을 사용하는데, 해당 ORM 프레임워크에서 사용하는 엔티티는 도메인객체의 엔티티(XXXDataModel 로 명명)와 다르게 적용한다 (spring data jpa는 도메인 객체의 엔티티와 jpa에서의 엔티티는 동일하게 처리된다)    
+  
+---
+
+- 6장 유스케이스를 구현하기 위한 애플리케이션 서비스
+  - 애플리케이션 서비스는 유스케이스를 구현하기 위한 객체
+    - 유스케이스?
+      - 직역하면 사용 사례
+      - 시스템 사용에 대한 시나리오의 집합
+      - ex. 시스템에서 사용자 기능을 구현하기위해서는 "사용자 등록하기" 유스케이스와 "사용자 정보 수정하기" 유스케이스가 필요..
+    - 도메인 객체를 조합해 실행되는 스크립트와 같다..
+    - 도메인 객체는 도메인을 코드로 옮긴것인데, 이를 이용자의 목적에 맞추기위해(애플리케이션의 존재 목적) 도메인 객체의 힘을 하나로 엮어서 제공해주어야하는데, 이를 애플리케이션 서비스가 담당한다(client가 사용할 서비스)
+  - 애플리케이션 서비스에서 도메인 객체를 client에게 바로 전달한다면?
+    - 
+  - 기타 팁
+    - 엔티티, 값 객체, 도메인 서비스 등 도메인 객체를 통해서 해당 프로그램이 사용할 도메인에 대한 관심과 지식을 살펴 볼 수 있고, 어플리케이션 서비스를 통해서 이런 도메인들을 어떻게 사용해서 사용자의 요구를 들어줄지(비지니스 로직)를 알 수 있다
+      - 즉, 어플리케이션 서비스는 유스케이스를 코드로 구현한 것
