공부한 내용 추가

--- a/java/토비의스프링/토비의 스프링2.md
+++ b/java/토비의스프링/토비의 스프링2.md
@@ -1098,10 +1098,14 @@
           - params : 파라미터
           - headers : HTTP 헤더
           - consumes : Content-type 헤더
+            - client의 `contentType` 이다. 당연 서버가 응답하는 데이터랑은 하등 상관없음..
+            - client가 여기서 json데이터를 바디에셋팅하고 `contentType`을 `plain/text`로 요청보내면 서버에서 json데이터로 인식못한다.. 에러뱉음(`@RequestBody` 에서 셋팅안됨)
+            - 이런 실수안하도록하기위해서 `consumes`를 사용해서 조건을 지정해주는게 좋을듯!
           - produces : Accept 헤더
-            - Accpet 헤더에 대한 요청조건일뿐 아니라, Reponse 의 content-type 또한 여기서 셋팅한 값으로 전달됨
+            - Accpet 헤더에 대한 요청조건일뿐 아니라, ***Reponse 의 content-type*** 또한 여기서 셋팅한 값으로 전달됨
               - 즉, application/json;charset=utf-8 이렇게 produce를 지정하면, response의 content type도 이와 동일하게 지정되고, 브라우저는 해당 내용에 맞춰서 보여줌(한글깨질때 잘 확인할것..)
               - 어떻게보면 당연한게, Accept 헤더의 요청조건이 application/json;charset=utf-8 이라면 브라우저는 저 형식에 맞추어서 받을수 있다라는 뜻일것이고, 그것에 맞추어 서버가 응답해주는것이니.. 당연..! 여기서 놓치지말아야할것은 클라이언트가 */*로 Accept를 놓앗을때, 서버에서 응답으로 한글을 보냈는데 utf-8로 응답을 주지않으면 깨질수있으니, produce를 통해서 charset을 지정해서 보내주는것이 필요하다는것!! 
+            
           - 사용자가 등록하는 커스텀 조건
         - 타입레벨과 메소드레벨에 모두 사용할수있으므로 하나의 핸들러 메소드를 선정할때 참고하는 요청조건은 모두 14가지
           - 두가지 이상의 조건이 지정된 경우네는 조건을 조합하거나 결합해서 사용(AND로 결합될수도있고, OR로 결합될수도있음)
