--- a/개발방법론/도메인 주도설계 철저입문.md
+++ b/개발방법론/도메인 주도설계 철저입문.md
@@ -512,3 +512,21 @@
       - <span style="color:red">자바에서는 도메인객체의 접근제어자를 어떻게 사용하는게 좋을까?</span>
   - 기타 팁
     - 패키지를 배치할 때는 클래스의 성격보다 의미적인 유사성을 더 고려하는것이 좋다!
+
+
+---
+
+- https://www.youtube.com/watch?v=TdyOH1xZpT8
+
+- 풍부한 도메인을 위해서는 도메인의 행위가 중요하다
+  - 속성이 중요한것은 data driven..
+  - 행위가 먼저 속성이 나중! 
+- 엔티티를 만들어가면서, 엔티티끼리 중복되는것들을 값 객체로 빼낼수있다. 그렇게되면 값 객체로 행동도 정의할 수 있기에 도메인을 좀 더 풍부하게 나타낼수있다.
+  - ex. 사진1 => 사진2
+- 접두어가 비슷해도 묶기 좋음
+  - 값 객체 안에 값 객체 있어도 상관없음
+  - 값 객체 안에 엔티티 있어도됨
+- application service
+  - 유스케이스 하나가 애플리케이션 서비스의 메소드 하나라고 보면된다
+- DomainEvent.. 찾아보자
+- 도메인 서비스는 행위만 갖는다.. 무상태!!
