공부한 내용 추가

--- a/개발방법론/도메인 주도설계 철저입문.md
+++ b/개발방법론/도메인 주도설계 철저입문.md
@@ -494,14 +494,14 @@
       - 이 또한 특정 도메인 패키지 하위로 들어가도 괜춘
     - shared는 공통으로 사용하는것을 위한 패키지
       - 이런부분은 모든곳에서 사용되므로 아예 공통프로젝트로 분리하는것도 좋음
-    - 사진참고 p347
+    - <img src="./domain_layer.jpeg" width="700px" height="500px" title="domain_layer"/>
     
   - 애플리케이션 레이어 패키지 구성
-    - 사진참고 p349
+    - <img src="./application_layer.jpeg" width="700px" height="500px" title="application_layer"/>
   - 인프라스트럭처 레이어의 패키지 구성
     - 의존하는 기술 기반으로 패키지 구성하여 하위에 도메인이름으로 패키지를 구분
       - ex. com.abc.jpa.circle, com.abc.jpa.user, com.abc.inmemory.circle, com.abc.inmemory.user
-    - 사진참고 p350
+    - <img src="./infra_structure_layer.jpeg" width="700px" height="500px" title="infra_structure_layer"/>
   - 솔루션 구성
     - 모두 한 프로젝트로 구성
     - 모두 별도의 프로젝트로 구성
