--- a/java/더블디스패치.md
+++ b/java/더블디스패치.md
@@ -6,3 +6,22 @@
   - 이를 범용적으로 쓰기위한 패턴이 visitor 패턴..
 - [내용 설명 굿](https://alkhwa-113.tistory.com/entry/%EB%94%94%EC%8A%A4%ED%8C%A8%EC%B9%98-%EB%8B%A4%EC%9D%B4%EB%82%98%EB%AF%B9-%EB%94%94%EC%8A%A4%ED%8C%A8%EC%B9%98-%EB%8D%94%EB%B8%94-%EB%94%94%EC%8A%A4%ED%8C%A8%EC%B9%98)
 - [토비 설명](https://www.youtube.com/watch?v=s-tXAHub6vg)
+  - 정적(static) 디스패치 : 컴파일 타임에 이미 어떤 메서드를 호출할지 알고있다 (정확하게 누가 누굴 의존하고있는지 컴파일 타임에 알고있다..)
+  - 다이나믹 디스패치
+    - 런타임시에 동적으로 어떤 클래스를 호출할 것인지 알 수 있음
+    - 인터페이스나 추상클래스를 활용하여 DI를 할수있는것이 이 개념으로 가능(확장에 유리한..)
+  - 더블디스패치는 다형성을 두번 사용해야할때 필요한 개념 ( ex. `추상클래스타입1.method(추상클래스타입2)` )
+        - `추상클래스타입1.method(추상클래스타입2)` 에서 파라미터로 추상클래스타입2를 전달하기위해서는, `추상클래스타입1`의 메서드시그니처가 `method(추상클래스타입2)` 로 정의되어있어야한다! `추상클래스타입2`의 구현된 클래스 타입만 있는것은 의미없다.. 알아서 추론못한다.. 이때 더블디스패치로 해결가능한것!
+    - 근데 보통 다형성 한번에 다 끝나기때문에 이를 사용할 경우는 드물다함
+  - 타입을 한번 더 체크해야하기때문에 성능면에서 그냥 디스패치 한번 진행하는것과보다 당연 떨어진다
+  
+  - 참고 
+    - 바이트코드 관련 설명 굿 : https://d2.naver.com/helloworld/1230
+    - 메서드 시그니처 vs 메서드 타입
+      - 메서드시그니처 : method name, parameter들.. (리턴타입은 포함되지않는다!)
+        - 메서드 시그니처가 같다면, 자바에서는 생성못함
+      - 메서드타입 : return type, method type parameter, method argument types, exception
+        - 위 4가지가 일치하면 Method Reference(메서드참조 - java8) 사용가능
+    - proxy visitor pattern
+      - jpa쪽..
+      - <span style="color:red">꼭 한번 찾아보기</span>
