공부한 내용 추가

--- a/java/토비의스프링/토비의 스프링2.md
+++ b/java/토비의스프링/토비의 스프링2.md
@@ -62,6 +62,7 @@
                 - ScopedProxyMode.TARGET_CLASS : 프록시 빈 클래스를 직접 DI 할때 사용 (cglib 사용)
                   - 위 둘 차이 설명 : https://stackoverflow.com/questions/21759684/interfaces-or-target-class-which-proxymode-should-i-choose
                   - 결론은 인터페이스를 사용하고있으면 INTERFACES를, 그렇지않으면 TARGET_CLASS를 사용하면됨
+                  - cglib proxy, jdk dynamic proxy 차이 설명 매우 좋음 : https://mangkyu.tistory.com/175
         - DL(dependency lookup)
           - Provider\<T\> 사용
             - JSR-330(DIJ) 에 추가된 표준인터페이스
@@ -1218,6 +1219,20 @@
     - 하나의 사진으로 깔끔하게 정리
       - ![](MVC_easily_understand.png)
         - 출처: https://earth-95.tistory.com/42
+      - 필터 VS 인터셉터
+        - 필터
+          - 필터는 스프링컨테이너에서 관리되는게아닌, 서블릿컨테이너에서 관리 (J2EE 표준 스펙)
+          - 그렇기에 필터는 스프링과 독립적인(그렇다고 빈 주입이 안되는것은 아님), 전역적인 설정 셋팅에 좋음.
+            - 공통된 보안, 인증/인가 관련..
+            - 모든 요청에 대한 로깅
+          - HttpServletRequest나 HttpServletResponse에 대한 조작가능 (`chain.doFilter`에서 객체를 직접 넘겨줄수있기때문에 Wrapper와 같은것을 사용가능)
+        - 인터셉터
+          - 인터셉터는 스프링컨테이너에서 관리
+          - Controller 단위의 세부적인 인증 인가 가능
+          - 특정 API의 호출에 대한 로깅가능
+          - 컨트롤러로 넘겨주는 데이터 조작가능
+          - Controller(핸들러 메서드) 호출전에 타게됨
+        - [정리매우굿](https://mangkyu.tistory.com/173)
     - 컨트롤러에서 에러발생시, HandlerExceptionResolver 전략을 통해서 잡게되면, 인터셉터의 postHandle은 타지않는다! 즉,preHandler과 afterComplpetion은 타게됨.. 그래서 에러 관련해서 알람발생이나 DB저장 등의 작업을 하고싶으면 afterCompletion에서 진행할것! 
       - 아마 컨트롤러에서 에러발생하면 인터셉터의 postHandle 호출하는 작업을 패스하고 뷰 관련된 작업 다 마친뒤에 마지막에 afterCompletion을 호출하고 끝나는듯함
       - HandlerInterceptor로 확인해본바, preHandle,afterCompletion의 로그는 남으나, postHandle의 로그는 안남음
