--- a/개발방법론/도메인 주도설계 철저입문.md
+++ b/개발방법론/도메인 주도설계 철저입문.md
@@ -530,3 +530,13 @@
   - 유스케이스 하나가 애플리케이션 서비스의 메소드 하나라고 보면된다
 - DomainEvent.. 찾아보자
 - 도메인 서비스는 행위만 갖는다.. 무상태!!
+
+
+
+---
+
+- 궁금사항
+  - 어플리케이션 서비스에는 에그리거트가 여러개 잇을수 있는건가?
+    - 한 트랜잭션에서 한개의 에그리거트만 수정하는게 좋으나, 부득이하게 필요시 여러 에그릭거트를 수정하는것은 문제되지않음.. 
+      - 그래서 최대한 이벤트를 사용하자!
+    - 그리고 특정 도메인객체의 값은 변경하는거 외에도 비지니스로직상 확인해봐야하는 부분이 필요하다면 데이터를 불러와야하니깐 에그리거트 여러개가 있는거는 문제되진않을듯 (즉, repository가 여러개있을수 있겠지..)
