--- a/java/modern_java/모던자바인액션.md
+++ b/java/modern_java/모던자바인액션.md
@@ -67,14 +67,24 @@
       - 예를들어, 인수없고 리턴값 void인 함수형인터페이스는 여러개가 될수있기때문에 어떤놈인지 알려주는것!
       - 캐스트에 인터섹션타입(Intersection Type)이란걸 사용할수도있는데, 이에 대한 설명은 "toby_reactive_stream 유투브 강의정리.md" 에서 확인할것
     - 자유변수를 사용할때는, 람다 캡처링을 이용해서 사용가능
+      - 람다 표현식을 통해서 생성된 인스턴스는 (당연)힙영역에 저장된다. 이때 참조가아닌 캡처링을 통해서 외부변수를 사용한다..! 참조를 하게되면, 람다표현식을 호출하는 메서드 내의 로컬 변수가 있고, 람다 표현식은 그 로컬 변수를 사용한다는 가정하에, 해당 메서드가 리턴되었을때 로컬변수는 사라지게되는데, 그럼 람다표현식에서 참조하고있는 변수또한 사라지게된다.. 이를 막기위해 캡쳐링!
+        - [참고](https://velog.io/@jylee9937/Java-Lambda%EC%99%80-Closure%EC%9D%98-%EA%B4%80%EA%B3%84)
+          - 여기 내용에 외부변수 유무가 람다와 클로져 차이라 하는데, 아닌듯함..
       - 자유변수란 파라미터로 넘겨진 변수가 아닌 외부에서 정의된 변수!
       - 자유변수중에서 힙에 올라가있는 인스턴스변수나 클래스 메모리에 올라가 있는 static변수의 경우는 람다 캡처링에 별 문제가없음.. 
       - 외부 지역변수를 가져올때가 주의해야함
         - 이 외부지역변수는 final로 선언되어있어야하거나, final로 선언된 변수와 똑같이 사용되어야함!(final 없어도 외부에서 해당 변수에 변동을 주면안됨)
-          - 지역변수에대한 복사한 값을 람다에 넘겨주는데, 해당 람다가 이후에 다른 스레드에서 실행되엇을때, 어떤 시점에서 실행될지 모르는데, 그때에 변경가능한 자유지역변수를 사용한다면, 스레드 실행시 정확히 어떤 값인지 알수가없다.. 그렇기때문에, final과 같이 해당 변수에 변경이 일어나면안되도록 한것! (Runnable을 구현하는 람다를 생각하면 쉽게 이해할수있음.. 새로운 스레드 만들어졌는데, 만약 변경가능한 지역변수를 복사한다면 항상 동일한 값이 넘어온다는것을 보장할수없다!)
+          - 지역변수에대한 복사한 값을 람다에 넘겨주는데, 해당 람다가 이후에 다른 스레드에서 실행되엇을때, 어떤 시점에서 실행될지 모르는데, 그때에 변경가능한 자유지역변수를 사용한다면, 스레드 실행시 정확히 어떤 값인지 알수가없다.. 그렇기때문에, final과 같이 해당 변수에 변경이 일어나면안되   도록 한것! (Runnable을 구현하는 람다를 생각하면 쉽게 이해할수있음.. 새로운 스레드 만들어졌는데, 만약 변경가능한 지역변수를 복사한다면 항상 동일한 값이 넘어온다는것을 보장할수없다!)
           - 그리고 복사한 값을 쓰는 또 다른 이유는.. 만약 스택에 있는 외부지역변수가 해당 스레드가 종료되어 사라진다면..? 나중에 람다를 실행시키는 또 다른 스레드는 어떻게할것이냐..? 그래서 값에 대한 복사가 필요함.. 그리고 이에 따라 파라미터에 변하는 값이아닌 고정된 값이 넘어온다는 것으로 안전성을 확증할수있음 
         - 람다식에서 외부 지역 변수를 이용할 경우 final 혹은 effectively final 이어야 하는 이유는 지역 변수가 스택에 저장되기 때문에 람다식에서 값을 바로 참조하는 것에 제약이 있어 복사된 값을 이용하게 되는데, 이때 멀티 쓰레드 환경에서 복사 될/복사된 값이 변경 가능 할 경우 이로 인한 동시성 이슈를 대응할 수 없기 때문이다.
+          - effectively final : Local 변수 중에서 값이 변하지 않는다고 컴파일러가 판단되면 final로 해석하는 것을 말합니다.
         - [설명굿](https://vagabond95.me/posts/lambda-with-final/)
+      - 왜 "자유"변수인가?
+        - 보통 로컬 변수같은경우 메서드 호출이 끝나면 사라지게되는데, 캡쳐된 자유변수는 메서드 호출에 상관없이 자유롭게 사용할 수 있기에 자유변수!
+      - 람다와 클로저 차이?
+        - 람다는 표현식.. 람다를 통해서 생성된 오브젝트가 클로져
+        - https://lunchballer.com/archives/284
+        
     - 메서드 참조
       - 특정 메서드만을 호출하는 람다의 축약형
       - 명시적으로 메서드명을 참조함으로써 가독성을 높일수 있음
