spring mvc 초기화 관련 부분 추가정리

--- a/java/토비의스프링/토비의 스프링2.md
+++ b/java/토비의스프링/토비의 스프링2.md
@@ -1533,16 +1533,75 @@
 ----
 
   - 서블릿 컨테이너와 스프링 컨테이너 (서블릿컨텍스트, 웹어플리케이션컨텍스트)
-    - 서블릿컨테이너는 톰캣이나 제티와같은 was에서 만들게되는데, 서블릿컨테이너가 서블릿 인터페이스를 구현한놈을 호출한다.. dispatcherservlet도 서블릿을 구현한놈으로 요놈을 호출하게되는데, 여기 
-    - dispatcherservlet에 서블릿 전용 웹어플리케이션컨텍스트를 가지게되어, 이 웹어플리케이션컨텍스트에 등록된 컨트롤러 빈들을 호출할수있게된다.. (dispatcherservlet은 스프링컨테이너가 관리하진않는다) 그리고 컨트롤러에있는 빈들은 루트 웹애플리케이션컨텍스트에 등록되어있는, 실제비지니스로직을 수행하는 빈들을 호출하여 작업을 진행한다.. 
-    - 무튼 결론은 서블릿컨테이너가 디스패처서블릿을 호출하고, 디스패처서블릿에 적용할 다양한 전략과, 컨트롤러빈들을 사용할수있게해주는것은 디스패처서블릿에있는 서블릿전용 웹어플리케이션컨텍스트 라고 보면될듯.. 그리고 서블릿전용 웹어플리케이샨컨텍스트는 상위컨텍스트인 루트 웹애플리케이션컨텍스트를 사용하여 비지니스로직를 수행할수맀음
+    - 서블릿 컨테이너는 톰켓이나 제티와 같은 was가 만들어주게되고 이 was는(web.xml을 읽어서..) ServletContext를 생성 및 소유하게된다.(DispatcherServlet에서 가지는 어플리케이션 컨텍스트가 아니다) 이 ServletContext에는 스프링 루트 어플리케이션 컨텍스트 (applicationContext.xml)를 등록하며 또한 서블릿을 등록할 수 있다. 여기서 스프링에서는 DispatcherServlet(서블릿구현체)을 사용하여 서블릿에 등록하게되는데, DispatcherServlet에서는 servlet-context.xml을 통해 생성된 어플리케이션컨텍스트를 가지고 있다. 해당 어플리케이션컨텍스트는 ServletContext에 등록한 루트어플리케이션 컨텍스트를 부모로 가지고있어서, 루트어플리케이션 컨텍스트의 빈들을 가져와서 사용할 수 있게된다. (여기 루트어플리케이션 컨텍스트엔 보통 서비스단 등의 빈들이 등록된다. Servlet쪽과는 독립적으로..)
+      - ContextLoaderListener를 통해서 루트어플리케이션컨텍스트를 서블릿컨텍스트에 등록한다
+        - `servletContext.setAttribute(WebApplicationContext.ROOT_WEB_APPLICATION_CONTEXT_ATTRIBUTE, this.context);`
+      - dispatcherservlet에 서블릿 전용 웹어플리케이션컨텍스트를 가지게되어, 이 웹어플리케이션컨텍스트에 등록된 컨트롤러 빈들을 호출할수있게된다.. (dispatcherservlet은 스프링컨테이너가 관리하진않는다) 그리고 컨트롤러에있는 빈들은 루트 웹애플리케이션컨텍스트에 등록되어있는, 실제비지니스로직을 수행하는 빈들을 호출하여 작업을 진행한다.. 
+      - 무튼 결론은 서블릿컨테이너가 디스패처서블릿을 호출하고, 디스패처서블릿에 적용할 다양한 전략과, 컨트롤러빈들을 사용할수있게해주는것은 디스패처서블릿에있는 서블릿전용 웹어플리케이션컨텍스트 라고 보면될듯.. 그리고 서블릿전용 웹어플리케이샨컨텍스트는 상위컨텍스트인 루트 웹애플리케이션컨텍스트를 사용하여 비지니스로직를 수행할수맀음
+      - 스프링부트는 좀 다르다. 서블릿컨테이너가 후킹하는 구조로 되어있는 것과 달리 내장 서블릿컨테이너를 사용하는데, 이렇게 되었을때 필터와 같은 부분을 스프링 설정에서 인지할수있다
+        - 공식문서 : Spring Boot follows a different initialization sequence. Rather than hooking into the lifecycle of the Servlet container, Spring Boot uses Spring configuration to bootstrap itself and the embedded Servlet container. Filter and Servlet declarations are detected in Spring configuration and registered with the Servlet container. 
+    - ????
+      - 루트어플리케이션컨텍스트와 서블릿어플리케이션컨텍스트가 언제 부모관계로 셋팅되는지..
+        - `AbstractAnnotationConfigDispatcherServletInitializer` web.xml 대신 자바config로 만드는방법인데, 여기서만 봤을때 어떻게 둘의 관계를 부모로 만들어주는지 모르겠다..
+        - => DispatcherServlet이 초기화될때 셋팅됨
+        ```java
+          // FreameworkServlet 클래스에 있음 ( DispatcherServlet extends FreameworkServlet)
+          protected WebApplicationContext initWebApplicationContext() {
+            WebApplicationContext rootContext = WebApplicationContextUtils.getWebApplicationContext(this.getServletContext());
+            WebApplicationContext wac = null;
+            if (this.webApplicationContext != null) {
+                wac = this.webApplicationContext;
+                if (wac instanceof ConfigurableWebApplicationContext) {
+                    ConfigurableWebApplicationContext cwac = (ConfigurableWebApplicationContext)wac;
+                    if (!cwac.isActive()) {
+                        if (cwac.getParent() == null) {
+                            cwac.setParent(rootContext);
+                        }
+
+                        this.configureAndRefreshWebApplicationContext(cwac);
+                    }
+                }
+            }
+
+            /**
+            만약 서블릿어플리케이션컨텍스트를 등록하지않았다면, 루트어플리케이션컨텍스트를 같이 사용하게된다..
+            아래 if문에 걸려서 그거 사용하는듯
+            
+            // 스프링 공식문서
+            If an application context hierarchy is not required, applications may configure a “root” context only and leave the contextConfigLocation Servlet parameter empty.
+            
+            */
+
+            if (wac == null) {  
+                wac = this.findWebApplicationContext();
+            }
+
+            if (wac == null) {
+                wac = this.createWebApplicationContext(rootContext);
+            }
+
+            if (!this.refreshEventReceived) {
+                this.onRefresh(wac);
+            }
+
+            if (this.publishContext) {
+                String attrName = this.getServletContextAttributeName();
+                this.getServletContext().setAttribute(attrName, wac);
+                if (this.logger.isDebugEnabled()) {
+                    this.logger.debug("Published WebApplicationContext of servlet '" + this.getServletName() + "' as ServletContext attribute with name [" + attrName + "]");
+                }
+            }
+
+            return wac;
+        }
+        ```
 
     - WAS가 실행되면, servletContext를 기반으로 서블릿 컨테이너를 올리게된다.. 
       - 이 servletContext에는 루트 웹애플리케이션컨텍스트와, 서블릿들을 등록하게된다
         - spring mvc에서는 dispatcherServlet을 사용하게되고, 여기에 서블릿용 웹애플리케이션컨텍스트를 등록한다
       - 서블릿용 웹애플리케이션컨텍스트는 루트웹애플리케이션컨텍스트의 자식이기때문에, 루트웹애플리케이션컨텍스트에 등록된 빈들을 참조가능하다(반대는 불가)
       ```java
-        public interface WebApplicationInitializer{ //이거를 WAS가 호출하는듯
+        public interface WebApplicationInitializer{ //이거를 WAS가 호출하는듯. 좀더 엄밀하게는 spring이 구현한 ServletContainerInitializer의 구현체(SpringServletContainerInitializer)가 호출해줌
           void onStartup(ServletContext servletContext) throws ServletException;
         }
 
@@ -1560,7 +1619,7 @@
       ``` 
   - ServletContext?
     - 웹 어플리케이션 내에서 서블릿들 간에 정보를 공유할수있고, 서블릿 컨테이너에 대한 정보를 추출할 수 있도록 해주는것!
-    - WAS에 등록된 웹 애플리케이션 단위로 컨텍스트가 생성.. 즉, WAS에 3개의 웹어플리케이션이있다면, 서블릿컨텍스트는 3개 (내장형 톰캣은 언제나 서블릿컨텍스트는 한개일듯..?)
+    - WAS에 등록된 웹 애플리케이션 단위로 컨텍스트가 생성.. 즉, WAS에 3개의 웹어플리케이션이있다면, DispatcherServlet이 3개 (그에 따라 DispatcherServlet이 가지고있는 applicationContext도 3개)
     - 그러므로 동일한 웹 애플리케이션에 존재하는 서블릿들은 동일한 ServletContext 객체를 사용
 
   - 참고사이트
