공부한 내용 추가

--- a/java/토비의스프링/토비의 스프링.md
+++ b/java/토비의스프링/토비의 스프링.md
@@ -379,6 +379,7 @@
     - Advice : 타깃 오브젝트에 적용하는 부가기능을 담은 오브젝트. 타깃 오브젝트에 종속되지않는다! 순수한 부가기능!(ex. MethodInterceptor를 구현한 오브젝트)
     - Pointcut : 메소드 선정 알고리즘을 담은 오브젝트! => 적용 클래스 맞는지(클래스필터), 메소드 맞는지(메소드매처)
       - 어드바이스 적용할 조인포인트를 선별하는 작업 또는 기능을 정의한 모듈
+      - spring aop는 AspectJ pointcut expression language 를 기본적으로 사용함
     - Advisor : Pointcut + Advice. 즉, 어떤 부가기능(advice)을 어디에 전달(pointcut)할 것인지를 알고 있는 모듈
     - Aspect : application을 구성하는 중요한 한가지 요소. 핵심기능에 부가되어 의미를 갖는 특별한 모듈. Advisor는 단순한 형태의 Aspect!
     - AOP : 관점 지향 프로그래밍. 핵심기능과 부가기능을 분리함으로써 부가기능을 하나의 관점에서 바라볼수 있도록 프로그래밍 하는것. 이를 통해서 부가기능에만 또한 집중할수있다(개발,설계시) 그래서 AOP는 OOP와 대비되는 개념이 아니라, OOP를 돕는 보조적인 기술.
