--- a/java/jvm/가비지 컬렉션.md
+++ b/java/jvm/가비지 컬렉션.md
@@ -58,3 +58,46 @@
 
 
 - 출처 : https://yaboong.github.io/java/2018/06/09/java-garbage-collection/
+
+
+
+- https://d2.naver.com/helloworld/1329
+  - Permanent Generation 영역(이하 Perm 영역)은 Method Area라고도 한다. 객체나 억류(intern)된 문자열 정보를 저장하는 곳이며, Old 영역에서 살아남은 객체가 영원히 남아 있는 곳은 절대 아니다. 이 영역에서 GC가 발생할 수도 있는데, 여기서 GC가 발생해도 Major GC의 횟수에 포함된다.
+  - Young 영역에서는 Eden영역과 두개의 Survivor 영역이 있다
+    - Eden 영역에 최초로 객체가 만들어지고, Survivor 영역을 통해서 Old 영역으로 오래 살아남은 객체가 이동한다
+    
+  - Old 영역 GC
+    - Serial GC
+      - mark-sweep-compact 알고리즘사용
+      - Old영역에 살아있는 객체를 mark하고, 그걸로인해 mark되지않은 객체를 sweep한다. 
+    - Parallel GC
+    - Parallel Old GC(Parallel Compacting GC)
+    - Concurrent Mark & Sweep GC(이하 CMS)
+    - G1(Garbage First) GC 
+      - G1 GC는 바둑판의 각 영역에 객체를 할당하고 GC를 실행한다.
+      - Young의 세가지 영역에서 데이터가 Old 영역으로 이동하는 단계가 사라진 GC 방식
+      - jdk 9부터 default GC
+      - 
+
+
+- [mark and sweep 심플설명](https://imasoftwareengineer.tistory.com/103)
+- [g1gc 쉽게 설명 굿](https://middleearth.tistory.com/87)
+  - g1gc가 빠른이유?
+    - 스레드 멈추지않고서도 동시진행가능
+    - 연속적으로 공간을 가지는 것이 아닌것! (힙 영역을 3영역(eden, survivor, old)으로 나누는것이 아닌, 수많은 작은 영역으로 쪼갠다)
+      - (디폴트로는 2MB) 모든 영역은 어떠한 공간을 가지게됨 (Region)
+        - Region 에 정의하는 논리적 개념
+          - Eden: 맨 처음 메모리 할당할 경우 들어가는 영역
+          - Survivor: Minor GC 수행시 Eden 영역에서 이동되는 객체들이 이동하는 영역
+          - Old: Survivor에서 살아남은 객체들이 이동하는 영역
+          - Avaialable / Unused region: 사용하지 않는 영역
+            - 한 영역이 GC에 의해 정리된다면 그 영역의 GC되고 나서 살아있는 객체들의 카피는 unassigned 영역으로 옮겨지게 된다.
+          - Humongous region: 객체의 크기가 region영역의 일정 부분을 채울 정도(사용자 설정 가능 ex: 1/2, 1/3)로 클 경우 해당 영역으로 이동한다.
+      - 만약 어떤 개발자가 힙 영역의 전체를 GC하길 원한다면 G1 GC도 여타 GC와 같이 똑같은 양의 작업을 해야 되는 것은 사실이지만 G1 GC는 애초에 힙 영역의 전체를 GC 할 일이 없다는 점에서 다른 GC와의 차이점
+        - 꽉 찼거나 거의 다 찬 영역만을 대상으로 GC를 진행하기에 시간복잡도는 살아있는 객체의 개수에만 비례 (모든 힙 영역의 크기를 훑어야하는 GC는 시간복잡도가 힙영역 크기와비례)
+  - 최초마킹 (STW)    
+
+- [](https://thinkground.studio/%EC%9D%BC%EB%B0%98%EC%A0%81%EC%9D%B8-gc-%EB%82%B4%EC%9A%A9%EA%B3%BC-g1gc-garbage-first-garbage-collector-%EB%82%B4%EC%9A%A9/)
+- [](https://javabom.tistory.com/7)
+- [](https://youn0111.tistory.com/m/entry/Java-Garbage-CollectionGC%EB%9E%80-%EB%AC%B4%EC%97%87%EC%9D%B4%EA%B3%A0-%EB%8F%99%EC%9E%91%EB%B0%A9%EC%8B%9D%EC%97%90-%EB%8C%80%ED%95%B4)
+- ["HotSpot Virtual Machine Garbage Collection Tuning Guide"의 Java 8 버전부터 12 버전까지의 문서를 읽고 정리한 문서](https://johngrib.github.io/wiki/java-g1gc/)
