--- a/기타/실수처리/컴퓨터의 실수처리방법.md
+++ b/기타/실수처리/컴퓨터의 실수처리방법.md
@@ -2,7 +2,7 @@
 
 - 부동소수점
   - 메모리에 32비트로 실수값을 저장한다고할때, 고정소수점(정수부와 실수부를 고정으로나눔)은 정수부를 많이쓸때는 실수부에 대한 정확도가 떨어질수있고, 실수부를 많이쓰게되면 정수부를 상대적으로 적게써야하므로 비효율적
-  - 이에 대한 해결책으로 부동(Float - 둥둥떠다닌다)소수점이 나오게되었는데, 정수부와 실수부를 이진수로 각각 구한뒤 소수점을 이동시켜(이거때문에 둥둥 떠다닌다고 표현) 1.xxx 형식으로 변경시키는것이다
+  - 이에 대한 해결책으로 부동(Float - 둥둥떠다닌다)소수점이 나오게되었는데, 정수부와 실수부를 이진수로 각각 구한뒤 소수점을 이동시켜(이거때문에 둥둥 떠다닌다고 표현) `1.xxx` 형식으로 변경시키는것이다
     - 그래서 아래와같이 구분된다 (32bit 기준)
       - 양수음수 구분 (1bit)
       - 소수점이 몇칸움직이는지 나타냄 (8bit)
