공부한 내용추가

--- a/java/spring/스프링 시큐리티.md
+++ b/java/spring/스프링 시큐리티.md
@@ -19,3 +19,13 @@
 - jwt는 claim기반의 토큰 방식인데, claim이라는 사용자에 대한 프로퍼티나 속성을 지니게 되는것을 이야기함.. 즉, jwt는 토큰에 사용자 정보가 담겨있다!
 
 - [스프링시큐리티 filter 설명](https://limdevbasic.tistory.com/19)
+- [jwt 설명 굿](https://backend-intro.vlpt.us/4/)
+- [jwt는 어디에 저장해야할까?](https://velog.io/@0307kwon/JWT%EB%8A%94-%EC%96%B4%EB%94%94%EC%97%90-%EC%A0%80%EC%9E%A5%ED%95%B4%EC%95%BC%ED%95%A0%EA%B9%8C-localStorage-vs-cookie)
+- [refresh 토큰 설명 굿](https://hudi.blog/refresh-token/)
+- 대략 보니, 완전한 대안은 없는듯
+  - 로컬스토리지에 넣자니, xss에 취약(js에서 그냥 가져올수있으니깐)
+  - 그래서 쿠키에 httponly나 secure 옵션을 넣어서 해보자니 csrf에 취약(요청시 쿠키의 값을 그대로 가져다 쓸 수 있으므로)
+    - 그리고 쿠키에 httponly옵션을 사용하면 쿠키정보를 js에서 가져올수없기때문에 헤더에 토큰을 넣을수 없다..
+  - 엑세스토큰과 리프레쉬토큰 두가지를 필수로 사용하게 되는것 같은데, 이는 완전히 막은게 아니라, 그냥 엑세스토큰의 주기를 짧게주고 엑세스토큰이 이상하거나 만료되었다면 리프레쉬토큰을 확인하여 재발급해주는 구조..
+    - SPA라면 엑세스토큰은 private 변수에 넣고, 리프레쉬토큰은 쿠키로 가져가는(httponly secure 옵션추가) 경우가 많은듯..(추가로 리프레쉬토큰으로 엑세스토큰 발급받을때 리프레쉬토큰 사용한걸로 체크하여 이미 사용된 리프레쉬토큰은 재사용못하도록.. - RTR(Refresh Token Rotation) )
+      - https://velog.io/@ohzzi/Access-Token%EA%B3%BC-Refresh-Token%EC%9D%84-%EC%96%B4%EB%94%94%EC%97%90-%EC%A0%80%EC%9E%A5%ED%95%B4%EC%95%BC-%ED%95%A0%EA%B9%8C
