--- a/java/토비의스프링/토비의 스프링2.md
+++ b/java/토비의스프링/토비의 스프링2.md
@@ -289,7 +289,7 @@
             - 프록시 모드 (JDK 다이내믹 프록시 vs CGLIB)
               - CGLIB 사용 
                 - 보통 인터페이스를 사용하지않을때, 클래스 레벨의 프록시를 사용하도록해줌(런타임 바이트 코드 생성기법을 이용해서 적용함)
-                - 상속해서 프록시를 만드는 개념이기때문에, final로 선언된 클래스는 안됨
+                - ***상속해서 프록시를 만드는 개념***이기때문에, final로 선언된 클래스는 안됨
                 - public으로 정의된 모든 메소드에 적용이 되기때문에, 수정자와 같은, 트랜잭션적용이 필요없는 메소드도 적용이 됨
                 - @EnableTransactionManager에 Proxy-target-class를 true로 변경해야하고(기본값 false) 인터페이스가 아닌 클래스에 선언해야한다
                   - 만약 인터페이스에 적용하고 proxy target class를 true로햇다면 트랜잭션 안먹는다
