스터디 내용 추가

--- a/개발방법론/도메인 주도설계 철저입문.md
+++ b/개발방법론/도메인 주도설계 철저입문.md
@@ -530,6 +530,7 @@
   - 유스케이스 하나가 애플리케이션 서비스의 메소드 하나라고 보면된다
 - DomainEvent.. 찾아보자
 - 도메인 서비스는 행위만 갖는다.. 무상태!!
+  - => 도메인주도설계 철저입문에서는 도메인 서비스를 도메인 패키지내에 서비스객체로 만들고, repository를 가지고있는것도 보여짐(UserService.exist). 하지만 도메인 주도개발 시작하기에서는 도메인서비스는 인터페이스로만들고 구현체를 인프라스트럭쳐쪽에 만들어서 사용하는걸로 가이드되어있음.. 스프링프레임워크 가정하에 전자를 활용하면 도메인 서비스또한 의존성주입을 위해 @Service 로 명시해서 사용하는게 좋을것 같고, 후자는 인프라스트럭쳐쪽에 @Component로 사용하면 좋을듯함
 
 
 
