공부한 내용 추가

--- a/java/spring/로그관련.md
+++ b/java/spring/로그관련.md
@@ -24,3 +24,8 @@
       - 만약 위의상황에서 additivity가 true라면, "com.example.recaptcha" 하위의 모든 패키지에서 debug level의 로그가 찍히는것은 물론이고, 상속받은 root도 있기때문에 root에 appender로 셋팅한것들도 진행하게된다.. 그래서 콘솔에서 보면 동일한 로그가 두번 찍히게된다( STDOUT 두번..)
         - 즉, 상속받는것이 오버라이딩되는 개념이 아니라, 고대로 상위 logger를 똑같이 실행시킨다고 생각하면된다..
   - [참고 사이트](https://thinkwarelab.wordpress.com/2016/11/18/java%EC%97%90%EC%84%9C-logback%EC%9D%84-%EC%9D%B4%EC%9A%A9%ED%95%9C-%EB%A1%9C%EA%B9%85logging-%EC%82%AC%EC%9A%A9%EB%B2%95/)
+
+
+
+- [springboot 로깅 설명굿](https://www.baeldung.com/spring-boot-logging)
+- [공식문서](https://docs.spring.io/spring-boot/docs/current/reference/html/features.html#features.logging)
