--- a/java/토비의스프링/토비의 스프링2.md
+++ b/java/토비의스프링/토비의 스프링2.md
@@ -1728,3 +1728,103 @@
     - `return-value-handlers`
 - 톰캣의 jsessionid 만드는 방법
   - https://semtax.tistory.com/92
+
+
+---
+
+- 인터셉터가 특정 Handler에 등록되는과정 (spring 4.3.14 기준)
+  - 요청이 들어오면 DispatcherServlet에서 HandlerMapping 구현체들중에 적절한 HandlerMapping 구현체를 찾고
+  - HandlerMapping 구현체에서 적절한 Handler를 만들고(정확히는 HandlerExecutionChain),
+    - 여기서 만들때, HandlerMapping의 추상클래스마다 가지고 있는 필수기본 인터셉터들 적절하게 넣어주고 (ex. `AbstractUrlHandlerMapping`)
+    - 사용자가 정의한 인터셉터들을 알맞게 넣어줌 (`AbstractHandlerMapping`의 adaptedInterceptors)
+      - 즉, 기본 HandlerMapping의 전략구현체들인 RequestMappingHandlerMapping과 SimpleUrlHandlerMapping에서 가지고있는 인터셉터들이 다름
+  - HandlerExecutionChain의 handler를 기반으로 이 핸들러를 실행시키는 적절한 HandlerAdpator를 찾아서 실행 (여기서 인터셉터들이 실행되고하겠지) 
+  - **스프링 5.x 에서는 적용 방법이 달라짐!!**
+    - 위의 적용방법은 동일하나, HandlerMapping 구현체를 빈으로 등록하는 과정에서 인터셉터를 넣어주는 로직이 변경됨. 
+    - 인터셉터를 등록하면, 모든 HandlerMapping 구현체들이 해당 인터셉터를 가지게됨. (즉, 기본적으로(default) 모든 handlerMapping구현체는 동일한 인터셉터를 가진다고보면됨)
+    - 특정 HandlerMapping에서만 인터셉터를 적용시키고자한다면, HandlerMapping을 오버라이딩 해야한다.. (하지만 굳이 그럴필요없이 그냥 excludePath를 잘 설정하자)
+    - 참고로 스프링4.x에서는 사용자가 등록한 인터셉터는 `RequestMappingHandlerMapping` 에서만 적용되었음
+      - 챗GPT 답변
+        - ![](2023-06-16-11-39-53.png)
+    - 소스 확인
+      - WebMvcConfigurationSupport.resourceHandlerMapping 에 인터셉터 적용하는 소스가 변경
+        - 5.3.26
+          ```java
+              @Bean
+              @Nullable
+              public HandlerMapping resourceHandlerMapping(@Qualifier("mvcContentNegotiationManager") ContentNegotiationManager contentNegotiationManager, @Qualifier("mvcConversionService") FormattingConversionService conversionService, @Qualifier("mvcResourceUrlProvider") ResourceUrlProvider resourceUrlProvider) {
+                  Assert.state(this.applicationContext != null, "No ApplicationContext set");
+                  Assert.state(this.servletContext != null, "No ServletContext set");
+                  PathMatchConfigurer pathConfig = this.getPathMatchConfigurer();
+                  ResourceHandlerRegistry registry = new ResourceHandlerRegistry(this.applicationContext, this.servletContext, contentNegotiationManager, pathConfig.getUrlPathHelper());
+                  this.addResourceHandlers(registry);
+                  AbstractHandlerMapping handlerMapping = registry.getHandlerMapping();
+                  if (handlerMapping == null) {
+                      return null;
+                  } else {
+                      if (pathConfig.getPatternParser() != null) {
+                          handlerMapping.setPatternParser(pathConfig.getPatternParser());
+                      } else {
+                          handlerMapping.setUrlPathHelper(pathConfig.getUrlPathHelperOrDefault());
+                          handlerMapping.setPathMatcher(pathConfig.getPathMatcherOrDefault());
+                      }
+
+                      handlerMapping.setInterceptors(this.getInterceptors(conversionService, resourceUrlProvider)); // 공통으로 가져옴.. 여기 handlerMapping뿐 아니라 다른 handler도 동일한 메서드 사용 (RequestMappingHandlerMapping 등록할때도 마찬가지..)
+                      handlerMapping.setCorsConfigurations(this.getCorsConfigurations());
+                      return handlerMapping;
+                  }
+              }
+
+              protected final Object[] getInterceptors(FormattingConversionService mvcConversionService, ResourceUrlProvider mvcResourceUrlProvider) {
+                  if (this.interceptors == null) {
+                      InterceptorRegistry registry = new InterceptorRegistry();
+                      this.addInterceptors(registry);
+                      registry.addInterceptor(new ConversionServiceExposingInterceptor(mvcConversionService));
+                      registry.addInterceptor(new ResourceUrlProviderExposingInterceptor(mvcResourceUrlProvider));
+                      this.interceptors = registry.getInterceptors();
+                  }
+
+                  return this.interceptors.toArray();
+              }
+          ```
+        - 4.3.12
+          ```java
+              @Bean
+              public HandlerMapping resourceHandlerMapping() {
+                  ResourceHandlerRegistry registry = new ResourceHandlerRegistry(this.applicationContext, this.servletContext, this.mvcContentNegotiationManager());
+                  this.addResourceHandlers(registry);
+                  AbstractHandlerMapping handlerMapping = registry.getHandlerMapping();
+                  if (handlerMapping != null) {
+                      ((AbstractHandlerMapping)handlerMapping).setPathMatcher(this.mvcPathMatcher());
+                      ((AbstractHandlerMapping)handlerMapping).setUrlPathHelper(this.mvcUrlPathHelper());
+                      ((AbstractHandlerMapping)handlerMapping).setInterceptors(new Object[]{new ResourceUrlProviderExposingInterceptor(this.mvcResourceUrlProvider())}); // 인터셉터를 직접 등록.. 사용자가 등록한걸 전달해주지않음. 반면, RequestMappingHandlerMapping 에서는 사용자가 등록한것들 interceptor에 넣어주는 로직이 있음..
+                      ((AbstractHandlerMapping)handlerMapping).setCorsConfigurations(this.getCorsConfigurations());
+                  } else {
+                      handlerMapping = new WebMvcConfigurationSupport.EmptyHandlerMapping();
+                  }
+
+                  return (HandlerMapping)handlerMapping;
+              }
+
+              @Bean
+              public RequestMappingHandlerMapping requestMappingHandlerMapping() {
+                  RequestMappingHandlerMapping mapping = this.createRequestMappingHandlerMapping();
+                  mapping.setOrder(0);
+                  mapping.setInterceptors(this.getInterceptors()); // 요기
+                  mapping.setContentNegotiationManager(this.mvcContentNegotiationManager());
+                  mapping.setCorsConfigurations(this.getCorsConfigurations());
+                  //...
+              }
+
+              protected final Object[] getInterceptors() {
+                  if (this.interceptors == null) {
+                      InterceptorRegistry registry = new InterceptorRegistry();
+                      this.addInterceptors(registry);
+                      registry.addInterceptor(new ConversionServiceExposingInterceptor(this.mvcConversionService()));
+                      registry.addInterceptor(new ResourceUrlProviderExposingInterceptor(this.mvcResourceUrlProvider()));
+                      this.interceptors = registry.getInterceptors();
+                  }
+
+                  return this.interceptors.toArray();
+              }
+          ```
